--- a/Swift Documentation/Swift Language guide/1.The Basics.md
+++ b/Swift Documentation/Swift Language guide/1.The Basics.md
@@ -1,6 +1,8 @@
 # The Basics
 **일반적인 종류의 데이터로 작업하고 기본 구문을 작성합니다.**
 
+Swift는 iOS, macOS, watchOS 및 tvOS 앱 개발을 위한 프로그래밍 언어입니다. C 또는 Objective-C 개발 경험이 있다면 Swift의 많은 부분이 익숙할 것입니다.
+
 
 
 
