--- a/Swift Documentation/Swift Language guide/1.The Basics.md
+++ b/Swift Documentation/Swift Language guide/1.The Basics.md
@@ -1,10 +1,40 @@
-# The Basics
+# The Basics(기본)
 **일반적인 종류의 데이터로 작업하고 기본 구문을 작성합니다.**
 
-Swift는 iOS, macOS, watchOS 및 tvOS 앱 개발을 위한 프로그래밍 언어입니다.   
-C 또는 Objective-C 개발 경험이 있다면 Swift의 많은 부분이 익숙할 것입니다.
+Swift 는 정수에 대한 `Int`, 부동 소수점(floating-point) 값에 대한 `Double`, 부울(Boolean) 값에 대한 `Bool` 그리고 텍스트에 대한 `String` 을 포함하는 많은 기본적인 데이터 타입을 제공합니다.
+
+Swift 는 또한 콜렉션 타입(Collection Types)에서 자세히 다룰 `Array`, `Set` 그리고 `Dictionary` 인 3개의 기본 콜렉션 타입을 제공합니다.
+
+#
+
+Swift 는 변수를 식별 가능한 이름으로 값을 저장하고 참조합니다. Swift 는 또한 값을 변경할 수 없는 변수를 광범위하게 사용합니다.
+
+이러한 변수를 상수라고 하며 값을 변경할 필요가 없을 때 코드를 더 안전하고 명확하게 만들기위해 Swift 에서 사용됩니다.
+
+#
+
+익숙한 타입 외에도 Swift 는 튜플(tuple)이라는 고급 타입이 있습니다. 튜플은 값을 그룹화하여 생성하거나 전달할 수 있습니다.
+
+튜플을 사용하여 함수의 여러값을 단일 복합 값으로 반환할 수 있습니다.
+
+#
+
+Swift 는 또한 값이 존재하지 않는 경우를 처리하기 위해 옵셔널(Optional) 타입이 있습니다.
+
+옵셔널은 "값이 있고 x와 같다" 또는 "값이 없다"를 알려줍니다.
+
+#
+
+Swift 는 타입-세이프(type-safe) 언어입니다. 즉, 언어가 코드에서 사용할 수 있는 값의 타입을 명확하게 하는 데 도움이 됩니다.
+
+만약 `String` 을 요구하는 코드에서 실수로 `Int` 로 전달하는 것을 방지할 수 있습니다.
+
+마찬가지로 타입 세이프티(type safety)는 옵셔널이 아닌 `String` 을 요구하는 코드에 옵셔널 `String` 을 실수로 전달하는 것을 방지합니다.
+ 
+타입 세이프티(type safety)는 개발 프로세스에서 가능한 빠르게 에러를 찾고 수정하는데 도움이 됩니다.
 
 
+## 상수와 변수 (Constants and Variavles)
 
 
 
