--- a/Swift Documentation/Swift Language guide/1.The Basics.md
+++ b/Swift Documentation/Swift Language guide/1.The Basics.md
@@ -114,6 +114,21 @@ var x = 0.0, y = 0.0, z = 0.0
 
 ## 타입 명시 (Type Annotations)
 
+상수 또는 변수를 선언할 때 타입 명시(Type Annotations)를 제공하여 상수나 변수가 저장할 수 있는 값의 종류를 명확히 할 수 있습니다.
+
+타입 명시는 상수 또는 변수 이름 뒤에 콜론과 공백 한칸 뒤에 사용할 타입 이름을 적어 사용합니다.
+
+#
+
+이 예제는 `welcomeMessage` 라는 변수에 `String` 값을 저장할 수 있음을 나타내기 위해 변수에 타입 명시를 제공합니다.
+
+~~~ swift
+var welcomeMessage: String
+~~~
+
+위 코드에서 선언에 있는 콜론은 "...의 타입은..." 을 의미하므로 아래와 같이 읽을 수 있습니다.
+
+"선언한 변수는 `welcomeMessage` 라고 하며 이것의 타입은 `String` 입니다."
 
 
 
