--- a/Swift Documentation/Swift Language guide/1.The Basics.md
+++ b/Swift Documentation/Swift Language guide/1.The Basics.md
@@ -128,7 +128,59 @@ var welcomeMessage: String
 
 위 코드에서 선언에 있는 콜론은 "...의 타입은..." 을 의미하므로 아래와 같이 읽을 수 있습니다.
 
+#
+
 "선언한 변수는 `welcomeMessage` 라고 하며 이것의 타입은 `String` 입니다."
+
+"...의 타입은 `String` 입니다." 라는 의미는 "모든 `String` 값을 저장 가능합니다." 라는 의미 입니다.
+
+저장할 수 있는 "어떠한 타입" (또는 "어떠한 종류") 라고 생각하면 됩니다.
+
+#
+
+`welcomeMessage` 변수는 이제 아무런 오류 없이 어떠한 문자열 값을 지정할 수 있습니다.
+
+~~~ swift
+welcomeMessage = "Hello"
+~~~
+
+같은 타입에 여러개의 연관된 변수를 콤마로 변수 이름을 구분하고, 마지막 변수 이름 뒤에 하나의 타입 명시를 통해 한줄로 선언할 수 있습니다.
+
+~~~ swift
+var red, green, blue: Double
+~~~
+
+> Note   
+> 실제로 타입 명시를 작성해야 하는 경우는 거의 없습니다. 상수 또는 변수를 선언할 때 초기값을 지정하면 Swift 는 타입 세이프티와 타입 추론(Type Safety and Type Inference) 에서   
+> 설명된 대로 해당 상수 또는 변수에 사용될 타입을 거의 항상 추론할 수 있습니다.    
+> 위의 `welcomeMessage` 예제에서 초기값을 지정하지 않았으므로 `welcomeMessage` 변수의 타입은 초기값에서 유추되지 않고 타입을 명시 하였습니다.    
+
+<br>
+
+## 상수와 변수의 이름 (Naming Constants and Variables)
+
+상수와 변수 이름은 유니코드 (Unicode) 문자를 포함하여 대부분의 문자를 포함할 수 있습니다.
+
+~~~ swift
+let π = 3.14159
+let 你好 = "你好世界"
+let 🐶🐮 = "dogcow"
+~~~
+
+상수와 변수 이름은 공백, 수학적 기호, 화살표, 내부에서 사용하는 유니코드 스칼라 값, 또는 선과 박스를 그리는 문자가 포함될 수 없습니다.
+
+이름의 다른 곳에 숫자가 포함될 수는 있지만 숫자로 시작하는 이름은 선언할 수 없습니다.
+
+#
+
+특정 타입의 상수 또는 변수를 선언한 후에 동일한 이름으로 다시 선언하거나 다른 타입의 값을 저장하도록 변경하여 변경하여 선언할 수 없습니다.
+
+상수를 변수로 바꾸거나 변수를 상수로 바꿀 수도 없습니다.
+
+> Note   
+> Swift 키워드와 동일한 이름의 상수 또는 변수를 제공해야 한다면 이름을 백틱(`)으로 묶어야 합니다.  
+> 그러나 선택의 여지가 전혀 없는 경우가 아니면 키워드를 이름으로 사용하지 말아야 합니다.
+
 
 
 
