--- a/Swift Documentation/1.Welcome to Swift/1.About Swift.md
+++ b/Swift Documentation/1.Welcome to Swift/1.About Swift.md
@@ -1,7 +1,9 @@
-# 
+# Swift 에 대해 (About Swift)
+
+언어의 높은 수준의 목표를 이해합니다.
 
 
 
 ***
-### ⬅️ [The Basics](https://github.com/DevWooHyeon/iOS_Documentation/blob/main/Swift%20Documentation/Swift%20Language%20guide/1.The%20Basics.md)
-### ➡️ [next]()
+
+### ➡️ [Version Compatibility]()
