--- a/Swift Documentation/2.Language Guide/1.The Basics.md
+++ b/Swift Documentation/2.Language Guide/1.The Basics.md
@@ -197,4 +197,5 @@ let 🐶🐮 = "dogcow"
 
 
 ***
-### ➡️ [Basic Operators](https://github.com/DevWooHyeon/iOS_Documentation/blob/main/Swift%20Documentation/Swift%20Language%20guide/2.Basic%20Operators.md)
+
+### ➡️ [Basic Operators](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/2.Language%20Guide/2.Basic%20Operators.md)
