--- a/Swift Documentation/1.Welcome to Swift/1.About Swift.md
+++ b/Swift Documentation/1.Welcome to Swift/1.About Swift.md
@@ -2,8 +2,13 @@
 
 언어의 높은 수준의 목표를 이해합니다.
 
+Swift 는 휴대폰, 태블릿, 데스크탑, 서버 또는 코드를 실행할 수 있는 모든 것을 위한 소프트웨어를 작성하는 환상적인 방법입니다.
+
+이는 최고의 현대 언어 사고방식과 오픈소스 커뮤니티의 지혜를 결합한 안전하고 빠른 프로그래밍 언어입니다.
+
+
 
 
 ***
 
-### ➡️ [Version Compatibility]()
+### ➡️ [Version Compatibility](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/1.Welcome%20to%20Swift/2.Version%20Compatibility.md)
