Update 3.A Swift Tour.md

--- a/Swift Documentation/1.Welcome to Swift/3.A Swift Tour.md
+++ b/Swift Documentation/1.Welcome to Swift/3.A Swift Tour.md
@@ -1,1 +1,8 @@
 # Swift 둘러보기 (A Swift Tour)
+
+
+
+***
+
+### ⬅️ [Version Compatibility](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/1.Welcome%20to%20Swift/2.Version%20Compatibility.md)
+### ➡️ [The Basics](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/2.Language%20Guide/1.The%20Basics.md)
