--- a/Swift Documentation/2.Language Guide/1.The Basics.md
+++ b/Swift Documentation/2.Language Guide/1.The Basics.md
@@ -3,7 +3,7 @@
 
 Swift 는 정수에 대한 `Int`, 부동 소수점(floating-point) 값에 대한 `Double`, 부울(Boolean) 값에 대한 `Bool` 그리고 텍스트에 대한 `String` 을 포함하는 많은 기본적인 데이터 타입을 제공합니다.
 
-Swift 는 또한 콜렉션 타입(Collection Types)에서 자세히 다룰 `Array`, `Set` 그리고 `Dictionary` 인 3개의 기본 콜렉션 타입을 제공합니다.
+Swift 는 또한 [콜렉션 타입(Collection Types)](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/2.Language%20Guide/4.Collection%20Types.md) 에서 자세히 다룰 `Array`, `Set` 그리고 `Dictionary` 인 3개의 기본 콜렉션 타입을 제공합니다.
 
 #
 
