--- a/Swift Documentation/1.Welcome to Swift/1.About Swift.md
+++ b/Swift Documentation/1.Welcome to Swift/1.About Swift.md
@@ -1,52 +1,7 @@
 # Swift 에 대해 (About Swift)
 
-언어의 높은 수준의 목표를 이해합니다.
 
-Swift 는 휴대폰, 태블릿, 데스크탑, 서버 또는 코드를 실행할 수 있는 모든 것을 위한 소프트웨어를 작성하는 환상적인 방법입니다.
-
-이는 최고의 현대 언어 사고방식과 오픈소스 커뮤니티의 지혜를 결합한 안전하고 빠른 프로그래밍 언어입니다.
-
-#
-
-Swift 는 숙련된 프로그래머에게 필요한 성능과 유연성을 놓치지 않으면서 새로운 프로그래머에게 친숙합니다.
-
-스크립팅 언어처럼 표현력이 풍부하고 즐거움이 가득한 프로그래밍 언어입니다.
-
-컴파일러는 성능에 최적화 되어있고 언어는 개발에 최적화 되어있으며, 어느쪽도 타협하지 않습니다.
-
-#
-
-Swift 는 최신 프로그래밍 패턴을 채택하여 많은 클래스의 일반적인 프로그래밍 오류를 정의합니다.
-
-- 변수는 항상 사용하기 전에 초기화 되어야 합니다.
-- 배열 (Array) 인덱스는 범위 초과 (out-of-bounds) 에러에 대해 검사되어야 합니다.
-- 정수 (Integer) 는 오버플로우 (overflow) 에 대해 검사되어야 합니다.
-- 옵셔널 (Optional) 은 `nil` 값이 명시적으로 처리되도록 합니다.
-- 메모리는 자동으로 관리됩니다.
-- 에러 처리를 통해 예기치 않은 오류를 처리할 수 있습니다.
-
-#
-
-Swift 코드는 최신 하드웨어를 최대한 활용하기 위해 컴파일되고 최적화 됩니다.
-
-구문과 표준 라이브러리는 코드를 작성하는 방법이 최상의 성능을 발휘해야 한다는 기본원칙에 따라 설계되었습니다.
-
-안정성과 속도의 조합으로 Swift 는 "Hello, world!" 로 부터 전체 운영 체제에 이르기 까지 최고의 선택입니다.
-
-#
-
-Swift 는 다른 인기 언어를 사용하는 개발자들에게 친숙하고 현대적이고 가벼운 구문을 타입 추론 (type inference), 패턴 매칭 (pattern matching) 과 같은
-
-강력한 기능과 결합하여 복잡한 것도 명확하고 간결한 방식으로 표현할 수 있도록 해줍니다.
-
-결과적으로 코드를 읽고, 쓰고, 유지하기 쉽습니다.
-
-#
-
-Swift 는 새롭고 강력한 기능을 통해 계속 발전하고 있습니다.
-
-Swift 의 목표는 야심찹니다. 여러분이 Swift 로 무엇을 만들어낼지 정말 기대됩니다.
 
 ***
 
-### ➡️ [Version Compatibility](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/1.Welcome%20to%20Swift/2.Version%20Compatibility.md)
+### ➡️ [Version Compatibility]()
