--- a/Swift Documentation/2.Language Guide/1.The Basics.md
+++ b/Swift Documentation/2.Language Guide/1.The Basics.md
@@ -1,201 +1,9 @@
 # The Basics (기본)
-**일반적인 종류의 데이터로 작업하고 기본 구문을 작성합니다.**
-
-Swift 는 정수에 대한 `Int`, 부동 소수점(floating-point) 값에 대한 `Double`, 부울(Boolean) 값에 대한 `Bool` 그리고 텍스트에 대한 `String` 을 포함하는 많은 기본적인 데이터 타입을 제공합니다.
-
-Swift 는 또한 [콜렉션 타입(Collection Types)](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/2.Language%20Guide/4.Collection%20Types.md) 에서 자세히 다룰 `Array`, `Set` 그리고 `Dictionary` 인 3개의 기본 콜렉션 타입을 제공합니다.
-
-#
-
-Swift 는 변수를 식별 가능한 이름으로 값을 저장하고 참조합니다. Swift 는 또한 값을 변경할 수 없는 변수를 광범위하게 사용합니다.
-
-이러한 변수를 상수라고 하며 값을 변경할 필요가 없을 때 코드를 더 안전하고 명확하게 만들기위해 Swift 에서 사용됩니다.
-
-#
-
-익숙한 타입 외에도 Swift 는 튜플(tuple)이라는 고급 타입이 있습니다. 튜플은 값을 그룹화하여 생성하거나 전달할 수 있습니다.
-
-튜플을 사용하여 함수의 여러값을 단일 복합 값으로 반환할 수 있습니다.
-
-#
-
-Swift 는 또한 값이 존재하지 않는 경우를 처리하기 위해 옵셔널(Optional) 타입이 있습니다.
-
-옵셔널은 "값이 있고 x와 같다" 또는 "값이 없다"를 알려줍니다.
-
-#
-
-Swift 는 타입-세이프(type-safe) 언어입니다. 즉, 언어가 코드에서 사용할 수 있는 값의 타입을 명확하게 하는 데 도움이 됩니다.
-
-만약 `String` 을 요구하는 코드에서 실수로 `Int` 로 전달하는 것을 방지할 수 있습니다.
-
-마찬가지로 타입 세이프티(type safety)는 옵셔널이 아닌 `String` 을 요구하는 코드에 옵셔널 `String` 을 실수로 전달하는 것을 방지합니다.
- 
-타입 세이프티(type safety)는 개발 프로세스에서 가능한 빠르게 에러를 찾고 수정하는데 도움이 됩니다.
-
-<br>
-
-## 상수와 변수 (Constants and Variavles)
-
-상수와 변수는 이름(`maximumNumberOfLoginAttempts` 또는 `welcomeMessage`)과 특정 타입(숫자 `10` 또는 문자열 `Hello`)의 값을 연결합니다.
-
-상수(Constant)의 값은 최초 지정 후 변경이 불가능하지만 변수(Variable)는 다른 값으로 변경이 가능합니다.
-
-<br>
-
-## 상수와 변수 선언 (Declaring Conatants and Variables)
-
-상수와 변수는 사용하기 전에 반드시 선언이 되어야 합니다. `let` 키워드를 사용하여 상수를 선언하고 `var` 키워드를 사용하여 변수를 선언합니다.
-
-다음의 예제는 사용자가 로그인을 시도한 횟수를 추적하기 위해 상수와 변수를 사용하는 방법에 대한 예입니다.
-
-~~~ swift
-let maximumNumberOfLoginAttempts = 10
-var currentLoginAttempt = 0
-~~~
-
-이 코드는 아래와 같이 읽을 수 있습니다.
-
-"`maximumNumberOfLoginAttempts` 인 새로운 상수를 선언하고  `10` 이라는 값을 지정합니다.
-
-그리고 `currentLoginAttempt` 인 새로운 변수를 선언하고 초기값을 `0` 으로 지정합니다."
-
-#
-
-이 예제에서는 최대 로그인 시도 횟수는 최대값이 절대 변경되지 않아야 하므로 상수로 선언하였습니다.
-
-현재 로그인 시도 횟수는 로그인 실패시 값을 증가시켜야 하므로 변수로 선언하였습니다.
-
-#
-
-코드에서 저장된 값이 변경되지 않으면 `let` 키워드로 상수로 선언합니다.
-
-변경되는 값을 저장하는 곳에만 변수를 사용합니다.
-
-#
-
-상수 또는 변수로 선언할때, 위의 예제처럼 선언하는 부분에 값을 줄 수 있습니다.
-
-또는 처음 값을 읽기 전에 값의 존재가 보장되면 프로그램에 마지막에 초기화 값을 할당할 수 있습니다.
-
-#
-
-~~~ swift
-var environment = "development"
-let maximumNumberOfLoginAttempts: Int
-// maximumNumberOfLoginAttempts has no value yet.
-
-
-if environment == "development" {
-    maximumNumberOfLoginAttempts = 100
-} else {
-    maximumNumberOfLoginAttempts = 10
-}
-// Now maximumNumberOfLoginAttempts has a value, and can be read.
-~~~
-
-이 예제에서 로그인 시도 최대횟수는 상수이고 이값은 환경에 따라 달라집니다.
-
-개발 환경에서는 100의 값을 가지고 다른 환경에서는 10을 가집니다.
-
-`if` 구문의 각 조건에서 어떠한 값으로 `maximumNumberOfLoginAttempts` 을 초기화하고, 이 상수는 항상 값이 있음을 보장합니다.
-
-이 방법으로 초기값을 설정할 때, Swift 가 어떻게 코드를 검사하는지 자세한 내용은 '상수선언 (Constant Declaration)' 을 참고 하세요.
-
-#
-
-여러개의 상수 또는 여러개의 변수를 선언할 때 콤마로 구분하여 한줄로 선언이 가능합니다.
-
-~~~ swift
-var x = 0.0, y = 0.0, z = 0.0
-~~~
-
-<br>
-
-## 타입 명시 (Type Annotations)
-
-상수 또는 변수를 선언할 때 타입 명시(Type Annotations)를 제공하여 상수나 변수가 저장할 수 있는 값의 종류를 명확히 할 수 있습니다.
-
-타입 명시는 상수 또는 변수 이름 뒤에 콜론과 공백 한칸 뒤에 사용할 타입 이름을 적어 사용합니다.
-
-#
-
-이 예제는 `welcomeMessage` 라는 변수에 `String` 값을 저장할 수 있음을 나타내기 위해 변수에 타입 명시를 제공합니다.
-
-~~~ swift
-var welcomeMessage: String
-~~~
-
-위 코드에서 선언에 있는 콜론은 "...의 타입은..." 을 의미하므로 아래와 같이 읽을 수 있습니다.
-
-#
-
-"선언한 변수는 `welcomeMessage` 라고 하며 이것의 타입은 `String` 입니다."
-
-"...의 타입은 `String` 입니다." 라는 의미는 "모든 `String` 값을 저장 가능합니다." 라는 의미 입니다.
-
-저장할 수 있는 "어떠한 타입" (또는 "어떠한 종류") 라고 생각하면 됩니다.
-
-#
-
-`welcomeMessage` 변수는 이제 아무런 오류 없이 어떠한 문자열 값을 지정할 수 있습니다.
-
-~~~ swift
-welcomeMessage = "Hello"
-~~~
-
-같은 타입에 여러개의 연관된 변수를 콤마로 변수 이름을 구분하고, 마지막 변수 이름 뒤에 하나의 타입 명시를 통해 한줄로 선언할 수 있습니다.
-
-~~~ swift
-var red, green, blue: Double
-~~~
-
-> Note   
-> 실제로 타입 명시를 작성해야 하는 경우는 거의 없습니다. 상수 또는 변수를 선언할 때 초기값을 지정하면 Swift 는 타입 세이프티와 타입 추론(Type Safety and Type Inference) 에서
-> 설명된 대로 해당 상수 또는 변수에 사용될 타입을 거의 항상 추론할 수 있습니다.
-> 위의 `welcomeMessage` 예제에서 초기값을 지정하지 않았으므로 `welcomeMessage` 변수의 타입은 초기값에서 유추되지 않고 타입을 명시 하였습니다.
-
-<br>
-
-## 상수와 변수의 이름 (Naming Constants and Variables)
-
-상수와 변수 이름은 유니코드 (Unicode) 문자를 포함하여 대부분의 문자를 포함할 수 있습니다.
-
-~~~ swift
-let π = 3.14159
-let 你好 = "你好世界"
-let 🐶🐮 = "dogcow"
-~~~
-
-상수와 변수 이름은 공백, 수학적 기호, 화살표, 내부에서 사용하는 유니코드 스칼라 값, 또는 선과 박스를 그리는 문자가 포함될 수 없습니다.
-
-이름의 다른 곳에 숫자가 포함될 수는 있지만 숫자로 시작하는 이름은 선언할 수 없습니다.
-
-#
-
-특정 타입의 상수 또는 변수를 선언한 후에 동일한 이름으로 다시 선언하거나 다른 타입의 값을 저장하도록 변경하여 변경하여 선언할 수 없습니다.
-
-상수를 변수로 바꾸거나 변수를 상수로 바꿀 수도 없습니다.
-
-> Note   
-> Swift 키워드와 동일한 이름의 상수 또는 변수를 제공해야 한다면 이름을 백틱(`)으로 묶어야 합니다.  
-> 그러나 선택의 여지가 전혀 없는 경우가 아니면 키워드를 이름으로 사용하지 말아야 합니다.
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
 ***
 
-### ➡️ [Basic Operators](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/2.Language%20Guide/2.Basic%20Operators.md)
+### ⬅️ [Swift Tour]() 
+
+### ➡️ [Basic Operators]()
