--- a/Swift Documentation/2.Language Guide/1.The Basics.md
+++ b/Swift Documentation/2.Language Guide/1.The Basics.md
@@ -198,4 +198,6 @@ let 🐶🐮 = "dogcow"
 
 ***
 
+### ⬅️ [A Swift Tour](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/1.Welcome%20to%20Swift/3.A%20Swift%20Tour.md)
+
 ### ➡️ [Basic Operators](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/2.Language%20Guide/2.Basic%20Operators.md)
