--- a/Swift Documentation/1.Welcome to Swift/3.A Swift Tour.md
+++ b/Swift Documentation/1.Welcome to Swift/3.A Swift Tour.md
@@ -1,5 +1,17 @@
 # Swift 둘러보기 (A Swift Tour)
 
+Swift 의 기능과 구문을 살펴봅니다.
+
+전통적으로 새로운 언어의 첫번째 프로그램은 "Hello, world!" 를 출려해야 한다고 합니다.
+
+Swift 에서는 이 작업을 한줄로 수행할 수 있습니다.
+
+~~~ swift
+print("Hello, world!")
+// Prints "Hello, world!"
+~~~
+
+
 
 
 ***
