Update 3.A Swift Tour.md

--- a/Swift Documentation/1.Welcome to Swift/3.A Swift Tour.md
+++ b/Swift Documentation/1.Welcome to Swift/3.A Swift Tour.md
@@ -11,6 +11,17 @@ print("Hello, world!")
 // Prints "Hello, world!"
 ~~~
 
+다른 언어를 알고 있다면 이 구문이 익숙해 보일 것입니다.
+
+Swift 에서 이 코드의 라인은 완벽한 프로그램입니다. 텍스트 출력이나 문자열 처리와 같은 기능을 위해 별도의 라이브러리를 가져올 필요가 없습니다.
+
+전역 범위에서 작성된 코드는 프로그램의 전체에서 사용되기 때문에 `main()` 함수가 필요하지 않습니다.
+
+또한 모든 명령문 끝에 세미콜론을 작성할 필요도 없습니다.
+
+#
+
+
 
 
 
