--- a/Swift Documentation/2.Language Guide/1.The Basics.md
+++ b/Swift Documentation/2.Language Guide/1.The Basics.md
@@ -1,5 +1,6 @@
 # The Basics (기본)
-**일반적인 종류의 데이터로 작업하고 기본 구문을 작성합니다.**
+
+일반적인 종류의 데이터로 작업하고 기본 구문을 작성합니다.
 
 Swift 는 정수에 대한 `Int`, 부동 소수점(floating-point) 값에 대한 `Double`, 부울(Boolean) 값에 대한 `Bool` 그리고 텍스트에 대한 `String` 을 포함하는 많은 기본적인 데이터 타입을 제공합니다.
 
