Update 3.A Swift Tour.md

--- a/Swift Documentation/1.Welcome to Swift/3.A Swift Tour.md
+++ b/Swift Documentation/1.Welcome to Swift/3.A Swift Tour.md
@@ -21,6 +21,14 @@ Swift 에서 이 코드의 라인은 완벽한 프로그램입니다. 텍스트 
 
 #
 
+이 둘러보기는 다양한 프로그래밍 작업을 수행하는 방법을 보여줌으로써 Swift 에서 코드 작성을 시작할 수 있는 충분한 정보를 제공합니다.
+
+이해하지 못하는 부분이 있어도 걱정하지 마세요.
+
+이 둘러보기에서 소개된 모든 내용은 이 문서의 나머지 부분에 자세히 설명되어 있습니다.
+
+## 단순한 값 (Simple Value)
+
 
 
 
