--- a/Swift Documentation/1.Welcome to Swift/3.A Swift Tour.md
+++ b/Swift Documentation/1.Welcome to Swift/3.A Swift Tour.md
@@ -27,7 +27,147 @@ Swift 에서 이 코드의 라인은 완벽한 프로그램입니다. 텍스트 
 
 이 둘러보기에서 소개된 모든 내용은 이 문서의 나머지 부분에 자세히 설명되어 있습니다.
 
+<br>
+
 ## 단순한 값 (Simple Value)
+
+상수를 만들기 위해 `let` 을 사용하고 변수를 만들기 위해 `var` 를 사용합니다.
+
+상수의 값은 컴파일 타임에 알 필요는 없지만 값을 반드시 한번은 할당 해야 합니다. 
+
+이는 값은 한번만 할당되지만 여러 위치에서 사용할 수 있다는 의미입니다.
+
+~~~ swift
+var myVariable = 42
+myVariable = 50
+let myConstant = 42
+~~~
+
+상수 또는 변수는 할당하려는 값과 동일한 타입이어야 합니다.
+
+그러나 항상 타입을 명시적으로 작성할 필요는 없습니다.
+
+상수 또는 변수를 생성할 때 값을 제공하면 컴파일러가 해당 타입을 추론할 수 있습니다.
+
+위의 예제에서 `myVariable` 의 초기값이 정수이기 때문에 컴파일러는 이를 정수로 추론합니다.
+
+#
+
+초기값이 충분한 정보를 제공하지 않거나 초기값이 없는 경우 변수 뒤에 콜론으로 구분하여 타입을 지정해야 합니다.
+
+~~~ swift
+let implicitInteger = 70
+let implicitDouble = 70.0
+let explicitDouble: Double = 70
+~~~
+
+> Experiment   
+> 명시적 타입이 `Float` 이고 값이 `4` 인 상수를 만들어 봅시다.
+
+#
+
+값은 암시적으로는 다른 타입으로 절대 변환되지 않습니다.
+
+값을 다른 타입으로 변환해야 하는 경우 원하는 타입의 인스턴스를 명시적으로 만들어야 합니다.
+
+~~~ swift
+let label = "The width is "
+let width = 94
+let widthLabel = label + String(width)
+~~~
+
+> Experiment   
+> 마지막 줄에서 `String` 으로 변환하는 부분을 제거해 보세요. 어떤 에러가 발생합니까?
+
+#
+
+문자열에 값을 포함하는 더 간단한 방법이 있습니다.
+
+소괄호 안에 값을 작성하고 소괄호 앞에 백슬래시 (\) 를 작성하면 됩니다. 
+
+~~~ swift
+let apples = 3
+let oranges = 5
+let appleSummary = "I have \(apples) apples."
+let fruitSummary = "I have \(apples + oranges) pieces of fruit."
+~~~
+
+> Experiment   
+> `\()` 를 사용하여 문자열에 부동 소수점 (floating-point) 계산을 포함하고 인사말에 누군가의 이름을 포함해 보십시오.
+
+#
+
+여러줄을 차지하는 문자열에는 3개의 쌍따옴표 (""") 를 사용합니다.
+
+닫는 따옴표의 들여쓰기와 일치하는 한 각 인용된 줄의 시작부분에 있는 들여쓰기는 제거됩니다.
+
+~~~ swift
+let quotation = """
+        Even though there's whitespace to the left,
+        the actual lines aren't indented.
+            Except for this line.
+        Double quotes (") can appear without being escaped.
+
+        I still have \(apples + oranges) pieces of fruit.
+        """
+~~~
+
+대괄호 ([]) 를 사용하여 배열 (array) 과 딕셔너리 (dictionary) 를 생성하고 대괄호에 인덱스 또는 키를 작성하여 해당 요소에 접근할 수 있습니다.
+
+마지막 요소 뒤에는 쉬표가 허용됩니다.
+
+~~~ swift
+var fruits = ["strawberries", "limes", "tangerines"]
+fruits[1] = "grapes"
+
+
+var occupations = [
+    "Malcolm": "Captain",
+    "Kaylee": "Mechanic",
+ ]
+occupations["Jayne"] = "Public Relations"
+~~~
+
+배열은 요소를 추가함에 따라 자동으로 크기가 늘어납니다.
+
+~~~ swift
+fruits.append("blueberries")
+print(fruits)
+// Prints "["strawberries", "grapes", "tangerines", "blueberries"]"
+~~~
+
+또한 대괄호를 사용하여 빈 배열 또는 딕셔너리를 작성합니다.
+
+배열의 경우 `[]`, 딕셔너리의 경우 `[:]` 로 작성합니다.
+
+~~~ swift
+fruits = []
+occupations = [:]
+~~~
+
+새로운 변수 또는 다른 장소의 타입 정보가 없는 곳에 빈 배열 또는 빈 딕셔너리를 할당하려면 타입을 명시해야 합니다.
+
+~~~ swift
+let emptyArray: [String] = []
+let emptyDictionary: [String: Float] = [:]
+~~~
+
+<br>
+
+## 제어 흐름 (Control Flow)
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
