Update 3.A Swift Tour.md

--- a/Swift Documentation/1.Welcome to Swift/3.A Swift Tour.md
+++ b/Swift Documentation/1.Welcome to Swift/3.A Swift Tour.md
@@ -164,7 +164,198 @@ let emptyDictionary: [String: Float] = [:]
 
 ## 제어 흐름 (Control Flow)
 
+조건문을 만들려면 `if` 와 `switch` 를 사용하고, 루프를 만들려면 `for-in`, `while`, 그리고 `repeat-while` 을 사용합니다.
 
+조건문이나 루프의 변수를 둘러싼 소괄호는 선택사항 입니다. 본문을 둘러싼 중괄호는 필수사항 입니다.
+
+~~~ swift
+let individualScores = [75, 43, 103, 87, 12]
+var teamScore = 0
+for score in individualScores {
+    if score > 50 {
+        teamScore += 3
+    } else {
+        teamScore += 1
+    }
+}
+print(teamScore)
+// Prints "11"
+~~~
+
+if 문에서는 조건부가 반드시 부울 (Boolean) 로 표현되어야 합니다.
+
+즉, `if score { ... }` 와 같은 코드는 암시적으로 0과 비교하는것이 아니라 에러를 의미합니다.
+
+#
+
+조건에 따라 값을 선택하기위해 할당의 `equal sign (=)` 뒤나 `return` 뒤에 `if` 또는 `switch` 를 작성할 수 있습니다.
+
+~~~ swift
+let scoreDecoration = if teamScore > 10 {
+    "🎉"
+} else {
+    ""
+}
+print("Score:", teamScore, scoreDecoration)
+// Prints "Score: 11 🎉"
+~~~
+
+#
+
+`if` 와 `let` 을 사용하여 누락될 수 있는 값을 작업하기 위해 사용할 수 있습니다. 이러한 값은 옵셔널 (Optional) 로 표기됩니다.
+
+옵셔널 값은 값을 포함하거나 값이 없음을 나타내는 `nil` 을 포함합니다.
+
+값을 옵셔널로 표시하려면 값의 타입뒤에 물음표 (?) 를 작성합니다.
+
+~~~ swift
+var optionalString: String? = "Hello"
+print(optionalString == nil)
+// Prints "false"
+
+
+var optionalName: String? = "John Appleseed"
+var greeting = "Hello!"
+if let name = optionalName {
+    greeting = "Hello, \(name)"
+}
+~~~
+
+> Experiment   
+> `optionalName` 을 `nil` 로 변경하십시오. 어떤 인사말을 얻습니까?   
+> `optionalName` 이 `nil` 인 경우 다른 인사말을 설정하기 위해 `else` 절을 추가하십시오.
+
+#
+
+옵셔널 값이 `nil` 이면 조건은 `false` 이고 중괄호 안에 코드는 건너뜁니다.
+
+옵셔널 값이 `nil` 이 아니면 옵셔널 값은 언래핑되고 `let` 뒤의 상수로 할당 되어 코드 블럭 안에서 언래핑 된 값으로 사용할 수 있습니다.
+
+#
+
+옵셔널 값을 처리하는 다른 방법은 `??` 연산자를 사용하여 기본값을 제공하는 것입니다.
+
+옵셔널 값이 없다면 기본값이 대신 사용됩니다.
+
+~~~ swift
+let nickname: String? = nil
+let fullName: String = "John Appleseed"
+let informalGreeting = "Hi \(nickname ?? fullName)"
+~~~
+
+#
+
+언래핑된 값에 대해 동일한 이름을 사용하여 더 짧게 값을 언래핑할 수 있습니다.
+
+~~~ swift
+if let nickname {
+    print("Hey, \(nickname)")
+}
+// Doesn't print anything, because nickname is nil.
+~~~
+
+#
+
+스위치 (switch) 는 모든 종류의 데이터와 다양한 비교 작업을 지원합니다.
+
+스위치는 정수 (integer) 및 동등성 비교로만 제한되지 않습니다.
+
+~~~ swift
+let vegetable = "red pepper"
+switch vegetable {
+case "celery":
+    print("Add some raisins and make ants on a log.")
+case "cucumber", "watercress":
+    print("That would make a good tea sandwich.")
+case let x where x.hasSuffix("pepper"):
+    print("Is it a spicy \(x)?")
+default:
+    print("Everything tastes good in soup.")
+}
+// Prints "Is it a spicy red pepper?"
+~~~
+
+> Experiment
+> default 케이스를 삭제해 봅시다. 어떤 에러가 발생합니까?
+
+
+패턴과 일치하는 값을 상수에 할당하기 위해 패턴에서 `let` 을 어떻게 사용하는지 확인하세요.
+
+일치하는 스위치 케이스 (case) 문을 실행하고 프로그램은 스위치 문을 종료합니다.
+
+다음 케이스로 이어서 실행되지 않기 때문에 각 케이스 코드에 명시적으로 스위치 종료를 할 필요가 없습니다.
+
+#
+
+`for-in` 을 사용하면 각 키-값 쌍에 사용할 이름의 쌍을 제공하여 딕셔너리의 항목을 반복할 수 있습니다.
+
+딕셔너리는 순서가 지정되지 않은 컬렉션 (collection) 이므로 해당 키와 값은 임의의 순서로 반복됩니다.
+
+~~~ swift
+let interestingNumbers = [
+    "Prime": [2, 3, 5, 7, 11, 13],
+    "Fibonacci": [1, 1, 2, 3, 5, 8],
+    "Square": [1, 4, 9, 16, 25],
+]
+var largest = 0
+for (_, numbers) in interestingNumbers {
+    for number in numbers {
+        if number > largest {
+            largest = number
+        }
+    }
+}
+print(largest)
+// Prints "25"
+~~~
+
+> Experiment
+> `_` 를 변수의 이름으로 변경하고 어떤 숫자가 가장 큰지 추적하십시오.
+
+#
+
+조건이 변경될 때까지 코드 블럭을 반복하려면 `while` 을 사용해야 합니다.
+
+또한 루프의 조건이 끝에 있을 수 있으므로 적어도 한번은 루프가 실행되도록 할 수 있습니다.
+
+~~~ swift
+var n = 2
+while n < 100 {
+    n *= 2
+}
+print(n)
+// Prints "128"
+
+
+var m = 2
+repeat {
+    m *= 2
+} while m < 100
+print(m)
+// Prints "128"
+~~~
+
+> Experiment
+> 루프 조건이 이미 참일 때 `while` 과 `repeat-while` 이 어떻게 다른지 살펴보기위해 `m < 100` 에서 `m < 0` 으로 조건을 변경해 봅시다.
+
+#
+
+인덱스의 범위를 만들기 위해선 `..<` 을 사용하여 루프에 인덱스를 만들 수 있습니다.
+
+~~~ swift
+var total = 0
+for i in 0..<4 {
+    total += i
+}
+print(total)
+// Prints "6"
+~~~
+
+가장 상위 값을 생략하는 범위를 만들기 위해 `..<` 를 사용하고 두 값을 모두 포함하는 범위를 만들기 위해 `...` 을 사용합니다.
+
+<br>
+
+## 함수와 클로저 (Functions and Closures)
 
 
 
