Update 3.A Swift Tour.md

--- a/Swift Documentation/1.Welcome to Swift/3.A Swift Tour.md
+++ b/Swift Documentation/1.Welcome to Swift/3.A Swift Tour.md
@@ -357,13 +357,171 @@ print(total)
 
 ## 함수와 클로저 (Functions and Closures)
 
+함수를 선언할때는 `func` 를 사용합니다. 소괄호 안에 인수의 리스트와 함수의 이름으로 호출합니다.
+
+함수의 반환 타입 (return type) 은 파라미터 (parameter) 의 이름, 타입과 구분하기 위해 `->` 를 사용합니다.
+
+~~~ swift
+func greet(person: String, day: String) -> String {
+    return "Hello \(person), today is \(day)."
+}
+greet(person: "Bob", day: "Tuesday")
+~~~
+
+> Experiment
+> `day` 파라미터를 지워 봅시다. 인사말에 오늘의 점심 특선 요리를 포함하기 위해 파라미터를 추가해 봅시다.
+
+#
+
+기본적으로 함수는 파라미터 이름을 인수의 레이블로 사용합니다.
+
+파라미터 이름 앞에 인수 레이블을 작성하거나 인수 레이블을 사용하지 않으려면 `_` 를 작성해야 합니다.
+
+~~~ swift
+func greet(_ person: String, on day: String) -> String {
+    return "Hello \(person), today is \(day)."
+}
+greet("John", on: "Wednesday")
+~~~
+
+#
+
+튜플 (tuple) 을 사용하여 복합 값을 만듭니다.
+
+예를 들어 함수에서 여러 값을 반환할 때 사용합니다. 튜플의 요소는 이름 또는 번호로 참조할 수 있습니다.
+
+~~~ swift
+func calculateStatistics(scores: [Int]) -> (min: Int, max: Int, sum: Int) {
+    var min = scores[0]
+    var max = scores[0]
+    var sum = 0
 
 
+    for score in scores {
+        if score > max {
+            max = score
+        } else if score < min {
+            min = score
+        }
+        sum += score
+    }
 
 
+    return (min, max, sum)
+}
+let statistics = calculateStatistics(scores: [5, 3, 100, 3, 9])
+print(statistics.sum)
+// Prints "120"
+print(statistics.2)
+// Prints "120"
+~~~
 
+#
 
+함수는 중첩될 수 있습니다.
 
+중첩 함수는 외부 함수에서 선언된 변수에 접근할 수 있습니다.
+
+중첩된 함수를 사용하여 길거나 복잡한 함수에서 코드를 구성할 수 있습니다.
+
+~~~ swift
+func returnFifteen() -> Int {
+    var y = 10
+    func add() {
+        y += 5
+    }
+    add()
+    return y
+}
+returnFifteen()
+~~~
+
+함수는 일급 타입 (first-class type) 입니다.
+
+이것은 함수가 다른 함수를 값으로 반환할 수 있음을 의미합니다.
+
+~~~ swift
+func makeIncrementer() -> ((Int) -> Int) {
+    func addOne(number: Int) -> Int {
+        return 1 + number
+    }
+    return addOne
+}
+var increment = makeIncrementer()
+increment(7)
+~~~
+
+#
+
+함수는 다른 함수를 인수 (argument) 중 하나로 가질 수 있습니다.
+
+~~~ swift
+func hasAnyMatches(list: [Int], condition: (Int) -> Bool) -> Bool {
+    for item in list {
+        if condition(item) {
+            return true
+        }
+    }
+    return false
+}
+func lessThanTen(number: Int) -> Bool {
+    return number < 10
+}
+var numbers = [20, 19, 7, 12]
+hasAnyMatches(list: numbers, condition: lessThanTen)
+~~~
+
+#
+
+함수는 실제로 나중에 호출될 수 있는 코드 블럭인 클로저 (closure) 의 특별한 케이스 입니다.
+
+클로저에 있는 코드는 이미 중첩된 함수의 예제에서 보았듯이 클로저가 실행될 때 다른 범위에 있더라도 클로저가 생성된 범위에서 사용 가능한 변수, 함수와 같은 항목에 접근할 수 있습니다.
+
+중괄호 ({}) 로 묶어 이름없이 클로저를 작성할 수 있습니다.
+
+본문으로부터 인수와 반환 타입을 분리하기 위해 `in` 을 사용합니다.
+
+~~~ swift
+numbers.map({ (number: Int) -> Int in
+    let result = 3 * number
+    return result
+})
+~~~
+
+> Experiment
+> 모든 홀수에 대해 0을 반환하도록 클로저를 다시 작성하십시오.
+
+#
+
+클로저를 더 간단하게 작성하기 위한 몇가지 선택사항이 있습니다.
+
+대리자 (delegate) 에 대한 콜백과 같이 클로저의 타입을 이미 알고 있다면 파라미터의 타입, 반환 타입 또는 둘다 생략할 수 있습니다.
+
+단일 명령문 클로저는 암시적으로 유일한 명령문의 값을 반환합니다.
+
+~~~ swift
+let mappedNumbers = numbers.map({ number in 3 * number })
+print(mappedNumbers)
+// Prints "[60, 57, 21, 36]"
+~~~
+
+#
+
+매우 짧은 클로저에 유용한 접근 방식으로 이름 대신 숫자로 파라미터를 참조할 수 있습니다.
+
+함수의 마지막 인자로 전달된 클로저는 소괄호 바로 뒤에 나타날 수 있습니다.
+
+클로저가 함수의 유일한 인수인 경우 소괄호는 생략할 수 있습니다.
+
+~~~ swift
+let sortedNumbers = numbers.sorted { $0 > $1 }
+print(sortedNumbers)
+// Prints "[20, 19, 12, 7]"
+~~~
+
+<br>
+
+## 객체와 클래스 (Objects and Classes)
 
 
 
