--- a/Swift Documentation/1.Welcome to Swift/3.A Swift Tour.md
+++ b/Swift Documentation/1.Welcome to Swift/3.A Swift Tour.md
@@ -523,7 +523,35 @@ print(sortedNumbers)
 
 ## 객체와 클래스 (Objects and Classes)
 
+`class` 뒤에 클래스 (class) 의 이름을 사용하여 클래스를 생성합니다.
 
+클래스에서 프로퍼티 선언은 클래스의 컨텍스트 (context) 내에 있다는 점을 제외하면 상수 또는 변수 선언과 동일한 방식으로 작성됩니다.
+
+마찬가지로 메서드와 함수 선언도 동일한 방식으로 작성됩니다.
+
+~~~ swift
+class Shape {
+    var numberOfSides = 0
+    func simpleDescription() -> String {
+        return "A shape with \(numberOfSides) sides."
+    }
+}
+~~~
+
+> Experiment   
+> `let` 을 사용하여 상수 프로퍼티를 추가하고 인수를 가지는 다른 메서드를 추가해 보시기 바랍니다.
+
+#
+
+클래스 이름 뒤에 소괄호를 넣어 클래스의 인스턴스를 생성합니다.
+
+인스턴스의 프로퍼티와 메서드에 접근하기 위해 점 구문을 사용합니다.
+
+~~~ swift
+var shape = Shape()
+shape.numberOfSides = 7
+var shapeDescription = shape.simpleDescription()
+~~~
 
 
 
