--- a/Swift Documentation/1.Welcome to Swift/3.A Swift Tour.md
+++ b/Swift Documentation/1.Welcome to Swift/3.A Swift Tour.md
@@ -553,6 +553,228 @@ shape.numberOfSides = 7
 var shapeDescription = shape.simpleDescription()
 ~~~
 
+#
+
+이 버전의 `shape` 클래스는 인스턴스가 생성될 때 클래스를 설정하는 초기화 구문 (initializer) 이 생략되었습니다.
+
+`init` 을 사용하여 생성합니다.
+
+~~~ swift
+class NamedShape {
+    var numberOfSides: Int = 0
+    var name: String
+
+
+    init(name: String) {
+       self.name = name
+    }
+
+
+    func simpleDescription() -> String {
+       return "A shape with \(numberOfSides) sides."
+    }
+}
+~~~
+
+#
+
+초기화 구문에서 `name` 인수와 `name` 프로퍼티를 구분하기 위해 `self` 가 어떻게 사용되는지 확인 하십시오.
+
+초기화 구문의 인수는 클래스의 인스턴스를 생성할 때 함수 호출처럼 전달됩니다.
+
+모든 프로퍼티는 `numberOfSides` 와 같이 선언 시나 `name` 과 같이 초기화 구문에서 값을 할당해야 합니다.
+
+#
+
+객체가 할당 해제되기 전에 일부 정리작업이 필요하여 초기화 해제 구문 (deinitializer) 을 생성하려면 `deinit` 을 사용합니다.
+
+#
+
+하위 클래스 (subclass) 는 클래스 이름 뒤에 콜론으로 구분하여 상위 클래스 (superclass) 이름이 포함됩니다.
+
+클래스가 모든 표준 루트 클래스를 하위 클래스화 할 필요 없으므로 필요에 따라 상위 클래스를 포함하거나 생략할 수 있습니다.
+
+#
+
+상위 클래스의 구현을 재정의 하는 하위 클래스의 메서드는 `override` 로 표시됩니다.
+
+실수로 `override` 없이 메서드를 재정의 하면 에러로 컴파일러에 의해 감지됩니다.
+
+컴파일러는 실제로 슈퍼 클래스의 어떤 메서드도 재정의 하지 않았는데도 `override` 키워드를 사용하는 메서드를 감지합니다.
+
+~~~ swift
+class Square: NamedShape {
+    var sideLength: Double
+
+
+    init(sideLength: Double, name: String) {
+        self.sideLength = sideLength
+        super.init(name: name)
+        numberOfSides = 4
+    }
+
+
+    func area() -> Double {
+        return sideLength * sideLength
+    }
+
+
+    override func simpleDescription() -> String {
+        return "A square with sides of length \(sideLength)."
+    }
+}
+let test = Square(sideLength: 5.2, name: "my test square")
+test.area()
+test.simpleDescription()
+~~~
+
+> Experiment    
+> 초기화 구문에 반지름과 이름을 인수로 가지는 `Circle` 이라는 `NamedShape` 의 하위 클래스를 만들어 보세요.     
+> `Circle` 클래스에 `area()` 와 `simpleDescription()` 메서드를 구현해 보세요.
+
+#
+
+저장된 단순 프로퍼티 외에도 프로퍼티는 getter 와 setter 를 가질 수 있습니다.
+
+~~~ swift
+class EquilateralTriangle: NamedShape {
+    var sideLength: Double = 0.0
+
+
+    init(sideLength: Double, name: String) {
+        self.sideLength = sideLength
+        super.init(name: name)
+        numberOfSides = 3
+    }
+
+
+    var perimeter: Double {
+        get {
+             return 3.0 * sideLength
+        }
+        set {
+            sideLength = newValue / 3.0
+        }
+    }
+
+
+    override func simpleDescription() -> String {
+        return "An equilateral triangle with sides of length \(sideLength)."
+    }
+}
+var triangle = EquilateralTriangle(sideLength: 3.1, name: "a triangle")
+print(triangle.perimeter)
+// Prints "9.3"
+triangle.perimeter = 9.9
+print(triangle.sideLength)
+// Prints "3.3000000000000003"
+~~~
+
+`perimeter` 의 setter 에서 새로운 값은 암시적으로 `newValue` 라는 이름을 가집니다.
+
+`set` 이후에 소괄호 안에 명시적으로 이름을 제공할 수 있습니다.
+
+`EquilateralTriangle` 클래스의 초기화 구문은 세가지 단계가 있습니다.
+
+1. 하위 클래스가 선언한 프로퍼티의 값을 설정합니다.
+2. 상위 클래스의 초기화 구문을 호출합니다.
+3. 상위 클래스에 의해 정의된 프로퍼티의 값을 변경합니다. 메서드, getter, setter 를 사용하는 추가 작업도 이 시점에서 수행할 수 있습니다.
+
+#
+
+프로퍼티를 계산할 필요는 없지만 새로운 값을 설정하기 전과 후에 실행되는 코드를 제공하려면 `willSet` 과 `didSet` 을 사용하면 됩니다.
+
+이렇게 제공한 코드는 초기화 구문의 외부에서 값이 변경될 때마다 실행됩니다.
+
+예를 들어 아래의 클래스는 삼각형의 변 길이가 항상 정사각형의 변 길이와 같다는 것을 확인합니다.
+
+~~~ swift
+class TriangleAndSquare {
+    var triangle: EquilateralTriangle {
+        willSet {
+            square.sideLength = newValue.sideLength
+        }
+    }
+    var square: Square {
+        willSet {
+            triangle.sideLength = newValue.sideLength
+        }
+    }
+    init(size: Double, name: String) {
+        square = Square(sideLength: size, name: name)
+        triangle = EquilateralTriangle(sideLength: size, name: name)
+    }
+}
+var triangleAndSquare = TriangleAndSquare(size: 10, name: "another test shape")
+print(triangleAndSquare.square.sideLength)
+// Prints "10.0"
+print(triangleAndSquare.triangle.sideLength)
+// Prints "10.0"
+triangleAndSquare.square = Square(sideLength: 50, name: "larger square")
+print(triangleAndSquare.triangle.sideLength)
+// Prints "50.0"
+~~~
+
+#
+
+옵셔널 값으로 동작할 때 메서드, 프로퍼티, 서브 스크립트 (subscript) 와 같은 작업 이전에 `?` 를 작성할 수 있습니다.
+
+`?` 전의 값이 `nil` 이면 `?` 이후의 모든 값은 무시되고 전체 표현식의 값은 `nil` 입니다.
+
+그렇지 않으면 옵셔널 값은 언래핑 되고 `?` 이후의 모든 항목은 언래핑된 값에 따라 작동합니다.
+
+두가지 경우 모두 전체 표현식의 값은 옵셔널 값입니다.
+
+~~~ swift
+let optionalSquare: Square? = Square(sideLength: 2.5, name: "optional square")
+let sideLength = optionalSquare?.sideLength
+~~~
+
+<br>
+
+## 열거형과 구조체 (Enumerations and Structures)
+
+열거형을 생성하기 위해 `enum` 을 사용합니다.
+
+클래스 및 기타 모든 명명된 타입과 마찬가지로 열거형은 연관된 메서를 가질 수 있습니다.
+
+~~~ swift
+enum Rank: Int {
+    case ace = 1
+    case two, three, four, five, six, seven, eight, nine, ten
+    case jack, queen, king
+
+
+    func simpleDescription() -> String {
+        switch self {
+        case .ace:
+            return "ace"
+        case .jack:
+            return "jack"
+        case .queen:
+            return "queen"
+        case .king:
+            return "king"
+        default:
+            return String(self.rawValue)
+        }
+    }
+}
+let ace = Rank.ace
+let aceRawValue = ace.rawValue
+~~~
+
+> Experiment
+> 원시값으로 2개의 `Rank` 값을 비교하는 함수를 작성해 보세요.
+
+#
+
+
+
+
+
+
+
 
 
 
