Update 3.A Swift Tour.md

--- a/Swift Documentation/1.Welcome to Swift/3.A Swift Tour.md
+++ b/Swift Documentation/1.Welcome to Swift/3.A Swift Tour.md
@@ -769,7 +769,58 @@ let aceRawValue = ace.rawValue
 
 #
 
+기본적으로 Swift 는 0부터 시작하여 매번 1씩 증가하는 원시값 (raw value) 을 할당하지만 특정 값을 명시적으로 지정하여 이 동작을 변경할 수 있습니다.
 
+위의 예제에서 `Ace` 는 명시적으로 `1` 의 값이 주어지고 나머지 원시값은 순서대로 할당됩니다.
+
+열거형의 원시 타입으로 문자열이나 부동 소수점도 사용할 수 있습니다.
+
+열거형 케이스의 원시값에 접근하기 위해 `rawValue` 프로퍼티를 사용합니다.
+
+#
+
+원시값을 기반으로 열거형의 인스턴스를 생성하기 위해 `init?(rawValue:)` 초기화 구문을 사용합니다.
+
+원시값이 일치하는 열거형 케이스나 `Rank` 에 일치하는 항목이 없으면 `nil` 을 반환합니다.
+
+~~~ swift
+if let convertedRank = Rank(rawValue: 3) {
+    let threeDescription = convertedRank.simpleDescription()
+}
+~~~
+
+#
+
+열거형의 케이스 값은 원시값을 작성하는 또 다른 방법이 아니라 실제 값입니다.
+
+실제로 의미 있는 원시값이 없는 경우에는 값을 제공할 필요가 없습니다.
+
+~~~ swift
+enum Suit {
+    case spades, hearts, diamonds, clubs
+
+
+    func simpleDescription() -> String {
+        switch self {
+        case .spades:
+            return "spades"
+        case .hearts:
+            return "hearts"
+        case .diamonds:
+            return "diamonds"
+        case .clubs:
+            return "clubs"
+        }
+    }
+}
+let hearts = Suit.hearts
+let heartsDescription = hearts.simpleDescription()
+~~~
+
+> Experiment
+> `spades` 와 `clubs` 의 경우 "black" 을 반환하고 `hearts` 와 `diamonds` 의 경우 "red" 를 반환하는 `color()` 메서드를 `Suit` 에 추가하십시오.
+
+#
 
 
 
