Update 3.A Swift Tour.md

--- a/Swift Documentation/1.Welcome to Swift/3.A Swift Tour.md
+++ b/Swift Documentation/1.Welcome to Swift/3.A Swift Tour.md
@@ -820,7 +820,85 @@ let heartsDescription = hearts.simpleDescription()
 > Experiment
 > `spades` 와 `clubs` 의 경우 "black" 을 반환하고 `hearts` 와 `diamonds` 의 경우 "red" 를 반환하는 `color()` 메서드를 `Suit` 에 추가하십시오.
 
+위의 예제에서 열거형의 `hearts` 케이스를 참조하는 두가지 방법에 주목하십시오.
+
+`hearts` 상수 값을 할당할 때 명시적으로 타입을 지정하지 않았기 때문에 열거형 케이스 `Suit.hearts` 전체 이름으로 찹조됩니다.
+
+스위치 내부에서는 `self` 의 값이 이미 `Suit` 로 알고 있기 때문에 열거형 케이스는 축약형인 `.hearts` 로 참조됩니다.
+
+값의 타입을 이미 알고 있다면 언제나 축약된 형식을 사용할 수 있습니다.
+
 #
+
+열거형이 원시값을 같는 경우 선언의 부분에서 결정됩니다.
+
+즉, 특정 열거형 케이스의 모든 인스턴스는 항상 동일한 원시값을 갖습니다.
+
+열거형 케이스의 또다른 선택은 케이스와 연관된 값 (associated value) 을 갖는 것입니다.
+
+연관값은 인스턴스를 만들 때 결정되며 열거형 케이스의 각 인스턴스마다 다를 수 있습니다.
+
+연관된 값은 열거형 케이스 인스턴스의 저장된 프로퍼티처럼 동작한다고 생각할 수 있습니다.
+
+예를 들어 서버에서 일출과 일몰 시간에 대해 요청한다고 가정해 봅시다.
+
+서버는 요청된 정보에 대한 응답을 하거나 무엇이 잘못되었는지에 대한 설명을 응답합니다.
+
+~~~ swift
+enum ServerResponse {
+    case result(String, String)
+    case failure(String)
+}
+
+
+let success = ServerResponse.result("6:00 am", "8:09 pm")
+let failure = ServerResponse.failure("Out of cheese.")
+
+
+switch success {
+case let .result(sunrise, sunset):
+    print("Sunrise is at \(sunrise) and sunset is at \(sunset).")
+case let .failure(message):
+    print("Failure...  \(message)")
+}
+// Prints "Sunrise is at 6:00 am and sunset is at 8:09 pm."
+~~~
+
+> Experiment
+> `ServerResponse` 에 세번째 케이스를 추가하십시오.
+
+스위치 케이스와 값을 일치시키는 과정의 부분에서 `ServerResponse` 값에서 일출과 일몰 시간이 어떻게 추출되는지 확인하세요.
+
+#
+
+구조체를 생성하기 위해 `struct` 를 사용합니다. 
+
+구조체는 메서드와 초기화 구문을 포함하여 클래스와 동일한 동작을 많이 지원합니다.
+
+구조체와 클래스의 가장 중요한 차이점 중 하나는 구조체는 코드에서 전달될 때 항상 복사되지만 클래스는 참조로 전달된다는 것입니다.
+
+~~~ swift
+struct Card {
+    var rank: Rank
+    var suit: Suit
+    func simpleDescription() -> String {
+        return "The \(rank.simpleDescription()) of \(suit.simpleDescription())"
+    }
+}
+let threeOfSpades = Card(rank: .three, suit: .spades)
+let threeOfSpadesDescription = threeOfSpades.simpleDescription()
+~~~
+
+> Experiment
+> 모든 `rank` 와 `suit` 의 각 조합에 대한 각각의 카드를 포함하는 전체 카드덱의 배열을 반환한는 함수를 작성하십시오.
+
+<br>
+
+## 동시성 (Concurrency)
+
+
+
+
 
 
 
