Update 3.A Swift Tour.md

--- a/Swift Documentation/1.Welcome to Swift/3.A Swift Tour.md
+++ b/Swift Documentation/1.Welcome to Swift/3.A Swift Tour.md
@@ -896,7 +896,247 @@ let threeOfSpadesDescription = threeOfSpades.simpleDescription()
 
 ## 동시성 (Concurrency)
 
+비동기적으로 실행되는 함수를 표시하기 위해 `async` 를 사용합니다.
 
+~~~ swift
+func fetchUserID(from server: String) async -> Int {
+    if server == "primary" {
+        return 97
+    }
+    return 501
+}
+~~~
+
+#
+
+비동기 함수를 호출할 때 앞에 `await` 을 작성하여 표시합니다.
+
+~~~ swift
+func fetchUsername(from server: String) async -> String {
+    let userID = await fetchUserID(from: server)
+    if userID == 501 {
+        return "John Appleseed"
+    }
+    return "Guest"
+}
+~~~
+
+#
+
+비동기 함수를 호출할 때 `async let` 을 사용하여 다른 비동기 코드와 병렬로 실행할 수 있습니다.
+
+반환된 값을 사용하는 경우 `await` 을 작성합니다.
+
+~~~ swift
+func connectUser(to server: String) async {
+    async let userID = fetchUserID(from: server)
+    async let username = fetchUsername(from: server)
+    let greeting = await "Hello \(username), user ID \(userID)"
+    print(greeting)
+}
+~~~
+
+#
+
+비동기 함수의 반환을 기다리지 않고 동기 코드에서 비동기 함수를 호출하려면 `Task` 를 사용합니다.
+
+~~~ swift
+Task {
+    await connectUser(to: "primary")
+}
+// Prints "Hello Guest, user ID 97"
+~~~
+
+#
+
+작업 그룹 (task group) 을 사용하여 동시성 코드를 구성합니다.
+
+~~~ swift
+let userIDs = await withTaskGroup(of: Int.self) { group in
+    for server in ["primary", "secondary", "development"] {
+        group.addTask {
+            return await fetchUserID(from: server)
+        }
+    }
+
+
+    var results: [Int] = []
+    for await result in group {
+        results.append(result)
+    }
+    return results
+}
+~~~
+
+#
+
+액터는 다양한 비동기 함수가 동시에 동일한 액터의 인스턴스와 안전하게 상호작용 할 수 있다는 것을 제외하면 클래스와 유사합니다.
+
+~~~ swift
+actor ServerConnection {
+    var server: String = "primary"
+    private var activeUsers: [Int] = []
+    func connect() async -> Int {
+        let userID = await fetchUserID(from: server)
+        // ... communicate with server ...
+        activeUsers.append(userID)
+        return userID
+    }
+}
+~~~
+
+#
+
+액터의 메서드를 호출하거나 프로퍼티에 접근할 때, 액터에서 이미 실행중인 다른 코드가 완료될 때까지 기다려야 할 수도 있음을 나타내기 위해 코드에 `await` 을 표시합니다.
+
+~~~ swift
+let server = ServerConnection()
+let userID = await server.connect()
+~~~
+
+<br>
+
+## 프로토콜과 확장 (Protocols and Extensions)
+
+프로토콜을 선언하려면 `protocol` 을 사용합니다.
+
+~~~ swift
+protocol ExampleProtocol {
+     var simpleDescription: String { get }
+     mutating func adjust()
+}
+~~~
+
+#
+
+클래스, 열거형, 구조체는 모두 프로토콜을 채택할 수 있습니다.
+
+~~~ swift
+class SimpleClass: ExampleProtocol {
+     var simpleDescription: String = "A very simple class."
+     var anotherProperty: Int = 69105
+     func adjust() {
+          simpleDescription += "  Now 100% adjusted."
+     }
+}
+var a = SimpleClass()
+a.adjust()
+let aDescription = a.simpleDescription
+
+
+struct SimpleStructure: ExampleProtocol {
+     var simpleDescription: String = "A simple structure"
+     mutating func adjust() {
+          simpleDescription += " (adjusted)"
+     }
+}
+var b = SimpleStructure()
+b.adjust()
+let bDescription = b.simpleDescription
+~~~
+
+> Experiment
+> `ExampleProtocol` 에 다른 요구사항을 추가하십시오.
+> 프로토콜을 계속 준수하려면 `SimpleClass` 와 `SimpleStructure` 에 어떤 변경을 해야할까요?
+
+#
+
+구조체를 수정하는 메서드를 표시하기위해 `SimpleStructure` 의 선언에서 `mutating` 키워드 사용을 주목하세요.
+
+클래스의 메서드는 항상 클래스를 수정할 수 있으므로 `SimpleClass` 의 선언에서는 `mutating` 으로 표시된 메서드가 필요하지 않습니다.
+
+#
+
+새로운 메서드와 계산된 프로퍼티 등 기존에 존재하는 타입에 기능을 추가하려면 `extension` 을 사용합니다.
+
+확장 (extension) 을 사용하여 다른 곳에 선언된 타입 또는 라이브러리나 프레임워크에서 가져온 타입에 프로토콜 준수를 추가할 수 있습니다.
+
+~~~ swift
+extension Int: ExampleProtocol {
+    var simpleDescription: String {
+        return "The number \(self)"
+    }
+    mutating func adjust() {
+        self += 42
+    }
+ }
+print(7.simpleDescription)
+// Prints "The number 7"
+~~~
+
+> Experiment
+> `Double` 타입에 대해 `absoluteValue` 프로퍼티를 추가 하기 위해 확장을 작성하십시오.
+
+#
+
+다른 명명된 타입과 마찬가지로 프로토콜 이름을 사용할 수 있습니다.
+
+예를 들어 다양한 타입을 가지고 있지만 모두 단일 프로토콜을 준수하는 객체 컬렉션을 만드는 경우에 사용할 수 있습니다.
+
+타입이 박스형 프로토콜 타입인 값으로 동작하는 경우 프로토콜에 정의 되지 않은 외부의 메서드를 사용할 수 없습니다.
+
+~~~ swift
+let protocolValue: any ExampleProtocol = a
+print(protocolValue.simpleDescription)
+// Prints "A very simple class.  Now 100% adjusted."
+// print(protocolValue.anotherProperty)  // Uncomment to see the error
+~~~
+
+`protocolValue` 변수에 `SimpleClass` 의 런타임 타입을 가지고 있더라도 컴파일러는 주어진 `ExampleProtocol` 의 타입으로 처리합니다.
+
+즉, 프로토콜 준수 외에 클래스가 구현하는 메서드나 프로퍼티에 실수로 접근할 수 없습니다.
+
+<br>
+
+## 에러 처리 (Error Handling)
+
+`Error` 프로토콜을 채택하는 모든 타입을 사용하여 에러를 나타냅니다.
+
+~~~ swift
+enum PrinterError: Error {
+    case outOfPaper
+    case noToner
+    case onFire
+}
+~~~
+
+#
+
+에러를 던지기 위해 `throw` 를 사용하고 에러를 던질 수 있는 함수를 나타내기 위해 `throws` 를 사용합니다.
+
+함수에서 에러가 발생하면 함수는 즉시 반환되고 함수를 호출한 코드가 에러를 처리합니다.
+
+~~~ swift
+func send(job: Int, toPrinter printerName: String) throws -> String {
+    if printerName == "Never Has Toner" {
+        throw PrinterError.noToner
+    }
+    return "Job sent"
+}
+~~~
+
+#
+
+에러를 처리하는 방법에는 여러가지가 있습니다.
+
+그중 하나는 `do-catch` 를 사용하는 것입니다.
+
+`do` 블럭 내에서 오류가 발생할 수 있는 코드를 표시하기 위해 앞에 `try` 를 작성합니다.
+
+`catch` 블럭 내에서 에러는 다른 이름으로 지정하지 않는 한 자동으로 `error` 라는 이름이 지정됩니다.
+
+~~~ swift
+do {
+    let printerResponse = try send(job: 1040, toPrinter: "Bi Sheng")
+    print(printerResponse)
+} catch {
+    print(error)
+}
+// Prints "Job sent"
+~~~
+
+> Experiment     
+> `send(job:toPrinter:)` 함수에서 에러가 발생하도록 프린터 이름을 `"Never Has Toner"` 로 변경합니다.
 
 
 
