Update 3.A Swift Tour.md

--- a/Swift Documentation/1.Welcome to Swift/3.A Swift Tour.md
+++ b/Swift Documentation/1.Welcome to Swift/3.A Swift Tour.md
@@ -275,7 +275,7 @@ default:
 // Prints "Is it a spicy red pepper?"
 ~~~
 
-> Experiment
+> Experiment     
 > default 케이스를 삭제해 봅시다. 어떤 에러가 발생합니까?
 
 
@@ -309,7 +309,7 @@ print(largest)
 // Prints "25"
 ~~~
 
-> Experiment
+> Experiment    
 > `_` 를 변수의 이름으로 변경하고 어떤 숫자가 가장 큰지 추적하십시오.
 
 #
@@ -335,7 +335,7 @@ print(m)
 // Prints "128"
 ~~~
 
-> Experiment
+> Experiment     
 > 루프 조건이 이미 참일 때 `while` 과 `repeat-while` 이 어떻게 다른지 살펴보기위해 `m < 100` 에서 `m < 0` 으로 조건을 변경해 봅시다.
 
 #
@@ -368,7 +368,7 @@ func greet(person: String, day: String) -> String {
 greet(person: "Bob", day: "Tuesday")
 ~~~
 
-> Experiment
+> Experiment    
 > `day` 파라미터를 지워 봅시다. 인사말에 오늘의 점심 특선 요리를 포함하기 위해 파라미터를 추가해 봅시다.
 
 #
@@ -488,7 +488,7 @@ numbers.map({ (number: Int) -> Int in
 })
 ~~~
 
-> Experiment
+> Experiment    
 > 모든 홀수에 대해 0을 반환하도록 클로저를 다시 작성하십시오.
 
 #
@@ -764,7 +764,7 @@ let ace = Rank.ace
 let aceRawValue = ace.rawValue
 ~~~
 
-> Experiment
+> Experiment      
 > 원시값으로 2개의 `Rank` 값을 비교하는 함수를 작성해 보세요.
 
 #
@@ -817,7 +817,7 @@ let hearts = Suit.hearts
 let heartsDescription = hearts.simpleDescription()
 ~~~
 
-> Experiment
+> Experiment    
 > `spades` 와 `clubs` 의 경우 "black" 을 반환하고 `hearts` 와 `diamonds` 의 경우 "red" 를 반환하는 `color()` 메서드를 `Suit` 에 추가하십시오.
 
 위의 예제에서 열거형의 `hearts` 케이스를 참조하는 두가지 방법에 주목하십시오.
@@ -864,7 +864,7 @@ case let .failure(message):
 // Prints "Sunrise is at 6:00 am and sunset is at 8:09 pm."
 ~~~
 
-> Experiment
+> Experiment    
 > `ServerResponse` 에 세번째 케이스를 추가하십시오.
 
 스위치 케이스와 값을 일치시키는 과정의 부분에서 `ServerResponse` 값에서 일출과 일몰 시간이 어떻게 추출되는지 확인하세요.
@@ -889,7 +889,7 @@ let threeOfSpades = Card(rank: .three, suit: .spades)
 let threeOfSpadesDescription = threeOfSpades.simpleDescription()
 ~~~
 
-> Experiment
+> Experiment    
 > 모든 `rank` 와 `suit` 의 각 조합에 대한 각각의 카드를 포함하는 전체 카드덱의 배열을 반환한는 함수를 작성하십시오.
 
 <br>
@@ -1035,7 +1035,7 @@ b.adjust()
 let bDescription = b.simpleDescription
 ~~~
 
-> Experiment
+> Experiment    
 > `ExampleProtocol` 에 다른 요구사항을 추가하십시오.
 > 프로토콜을 계속 준수하려면 `SimpleClass` 와 `SimpleStructure` 에 어떤 변경을 해야할까요?
 
@@ -1064,7 +1064,7 @@ print(7.simpleDescription)
 // Prints "The number 7"
 ~~~
 
-> Experiment
+> Experiment    
 > `Double` 타입에 대해 `absoluteValue` 프로퍼티를 추가 하기 위해 확장을 작성하십시오.
 
 #
@@ -1138,16 +1138,130 @@ do {
 > Experiment     
 > `send(job:toPrinter:)` 함수에서 에러가 발생하도록 프린터 이름을 `"Never Has Toner"` 로 변경합니다.
 
+#
+
+특정 에러를 처리하는 여러개의 `catch` 블럭을 제공할 수 있습니다.
+
+스위치에서 `case` 와 마찬가지로 `catch` 이후에 패턴을 작성합니다.
+
+~~~ swift
+do {
+    let printerResponse = try send(job: 1440, toPrinter: "Gutenberg")
+    print(printerResponse)
+} catch PrinterError.onFire {
+    print("I'll just put this over here, with the rest of the fire.")
+} catch let printerError as PrinterError {
+    print("Printer error: \(printerError).")
+} catch {
+    print(error)
+}
+// Prints "Job sent"
+~~~
+
+> Experiment     
+> `do` 블럭 내에 에러를 발생하는 코드를 추가하십시오.
+> 첫번째 `catch` 블럭에서 에러를 처리하려면 어떤 종류의 에러를 던져야 할까요?
+> 두번째와 세번째 블럭에 대해선 무슨 에러를 던져야 할까요?
+
+#
+
+에러를 처리하는 다른 방법은 결과를 옵셔널로 바꾸는 `try?` 를 사용하는 것입니다.
+
+함수에서 에러가 발생하면 특정 에러는 버려지고 결과는 `nil` 입니다.
+
+그렇지 않으면 결과는 함수가 반환하는 옵셔널 값입니다.
+
+~~~ swift
+let printerSuccess = try? send(job: 1884, toPrinter: "Mergenthaler")
+let printerFailure = try? send(job: 1885, toPrinter: "Never Has Toner")
+~~~
+
+#
+
+함수가 반환되기 직전, 함수의 다른 모든 코드 이후에 실행되는 코드의 블럭을 작성하기 위해 `defer` 를 사용합니다.
+
+이 코드는 함수에서 에러가 발생하는지 여부와 관계없이 실행됩니다.
+
+서로 다른 시간에 실행되어야 하는 경우에도 설정 및 정리 코드를 나란히 작성하기 위해 `defer` 를 사용할 수 있습니다.
+
+~~~ swift
+var fridgeIsOpen = false
+let fridgeContent = ["milk", "eggs", "leftovers"]
 
 
+func fridgeContains(_ food: String) -> Bool {
+    fridgeIsOpen = true
+    defer {
+        fridgeIsOpen = false
+    }
 
 
+    let result = fridgeContent.contains(food)
+    return result
+}
+if fridgeContains("banana") {
+    print("Found a banana")
+}
+print(fridgeIsOpen)
+// Prints "false"
+~~~
 
+<br>
 
+## 제네릭 (Generics)
 
+제네릭 (generic) 함수 또는 타입을 만들기 위해 꺾쇠 괄호 안에 이름을 작성합니다.
 
+~~~ swift
+func makeArray<Item>(repeating item: Item, numberOfTimes: Int) -> [Item] {
+    var result: [Item] = []
+    for _ in 0..<numberOfTimes {
+         result.append(item)
+    }
+    return result
+}
+makeArray(repeating: "knock", numberOfTimes: 4)
+~~~
 
+#
 
+클래스, 열거형, 구조체 뿐만 아니라 일반적인 형태의 함수 및 메서드도 만들 수 있습니다.
+
+~~~ swift
+enum OptionalValue<Wrapped> {
+    case none
+    case some(Wrapped)
+}
+var possibleInteger: OptionalValue<Int> = .none
+possibleInteger = .some(100)
+~~~
+
+#
+
+요구사항의 리스트를 지정하기 위해 본문 바로 전에 `where` 을 사용합니다.
+
+예를 들어 타입이 프로토콜을 구현하도록 요구하거나, 두 타입이 동일하도록 요구하거나, 클래스가 특정 상위 클래스를 갖도록 요구하는 경우 입니다.
+
+~~~ swift
+func anyCommonElements<T: Sequence, U: Sequence>(_ lhs: T, _ rhs: U) -> Bool
+    where T.Element: Equatable, T.Element == U.Element
+{
+    for lhsItem in lhs {
+        for rhsItem in rhs {
+            if lhsItem == rhsItem {
+                return true
+            }
+        }
+    }
+   return false
+}
+anyCommonElements([1, 2, 3], [3])
+~~~
+
+> Experiment      
+> 두 시퀀스가 공통으로 가지는 요소의 배열을 반환하는 함수를 만들기 위해 `anyCommonElements(_:_:)` 함수를 수정 하십시오.
+
+`<T: Equatable>` 을 작성하는 것은 `<T> ... where T: Equatable` 을 작성하는 것과 같습니다.
 
 ***
 
