--- a/Swift Documentation/2.Language Guide/1.The Basics.md
+++ b/Swift Documentation/2.Language Guide/1.The Basics.md
@@ -101,7 +101,7 @@ if environment == "development" {
 
 `if` 구문의 각 조건에서 어떠한 값으로 `maximumNumberOfLoginAttempts` 을 초기화하고, 이 상수는 항상 값이 있음을 보장합니다.
 
-이 방법으로 초기값을 설정할 때, Swift 가 어떻게 코드를 검사하는지 자세한 내용은 '상수선언 (Constant Declaration)' 을 참고 하세요.
+이 방법으로 초기값을 설정할 때, Swift 가 어떻게 코드를 검사하는지 자세한 내용은 [상수선언 (Constant Declaration)]() 을 참고 하세요.
 
 #
 
@@ -152,7 +152,7 @@ var red, green, blue: Double
 ~~~
 
 > Note   
-> 실제로 타입 명시를 작성해야 하는 경우는 거의 없습니다. 상수 또는 변수를 선언할 때 초기값을 지정하면 Swift 는 타입 세이프티와 타입 추론(Type Safety and Type Inference) 에서
+> 실제로 타입 명시를 작성해야 하는 경우는 거의 없습니다. 상수 또는 변수를 선언할 때 초기값을 지정하면 Swift 는 [타입 세이프티와 타입 추론(Type Safety and Type Inference)]() 에서
 > 설명된 대로 해당 상수 또는 변수에 사용될 타입을 거의 항상 추론할 수 있습니다.
 > 위의 `welcomeMessage` 예제에서 초기값을 지정하지 않았으므로 `welcomeMessage` 변수의 타입은 초기값에서 유추되지 않고 타입을 명시 하였습니다.
 
@@ -182,8 +182,128 @@ let 🐶🐮 = "dogcow"
 > Swift 키워드와 동일한 이름의 상수 또는 변수를 제공해야 한다면 이름을 백틱(`)으로 묶어야 합니다.  
 > 그러나 선택의 여지가 전혀 없는 경우가 아니면 키워드를 이름으로 사용하지 말아야 합니다.
 
+#
 
+기존 변수의 값을 동일한 타입의 다른 값으로 변경할 수 있습니다.
 
+아래의 예제에서는 `friendlyWelcome` 값이 `"Hello!"` 에서 `"Bonjour!"` 로 변경됩니다.
+
+~~~ swift
+var friendlyWelcome = "Hello!"
+friendlyWelcome = "Bonjour!"
+// friendlyWelcome is now "Bonjour!"
+~~~
+
+#
+
+변수와 달리 상수값은 지정된 이후에는 변경할 수 없습니다.
+
+값의 변경을 시도하면 코드가 컴파일 될 때 오류가 발생합니다.
+
+~~~ swift
+let languageName = "Swift"
+languageName = "Swift++"
+// This is a compile-time error: languageName cannot be changed.
+~~~
+
+<br>
+
+## 상수와 변수 출력 (Printing Constants and Variables)
+
+`print(_:separator:terminator:)` 함수를 사용하여 상수 또는 변수의 현재 값을 출력할 수 있습니다.
+
+~~~ swift
+print(friendlyWelcome)
+// Prints "Bonjour!"
+~~~
+
+#
+
+`print(_:separator:terminator:)` 함수는 하나 또는 그 이상의 값을 출력하는 전역 함수 입니다.
+
+예를 들어 Xcode 에서 `print(_:separator:terminator:)` 함수는 Xcode "콘솔 (console)" 창에 결과를 출력합니다.
+
+`separator` 와 `terminator` 파라미터는 기본 값을 가지고 있으므로 함수를 호출할 때 생략할 수 있습니다.
+
+기본적으로 이 함수는 줄바꿈을 출력하고 종료됩니다.
+
+줄바꿈 없이 값을 출력하려면 `print(someValue, terminator: "")` 와 같이 `terminator` 에 빈 문자열을 넘겨주면 됩니다.
+
+기본값이 있는 파라미터에 대한 자세한 내용은 [파라미터 기본 값 (Default Parameter Values)]() 을 참고 하십시오.
+
+#
+
+Swift 는 긴 문자열에 상수 또는 변수의 이름을 포함하여 Swift 가 상수 또는 변수의 현재 값으로 바꾸도록 하기 위해 문자열 삽입 (String interpolation) 을 사용합니다.
+
+이름을 소괄호로 감싸고 소괄호 전에 백슬래시를 추가해야 합니다.
+
+~~~ swift
+print("The current value of friendlyWelcome is \(friendlyWelcome)")
+// Prints "The current value of friendlyWelcome is Bonjour!"
+~~~
+
+> Note   
+> 문자열 삽입에 사용할 수 있는 모든 옵션은 [문자열 삽입 (String interpolation)]() 에 자세히 설명되어 있습니다.
+
+<br>
+
+## 주석 (Comments)
+
+코드에서 설명 또는 기록을 위해 실행되지 않는 문자를 추가할 땐 주석 (Comments) 을 사용합니다.
+
+코드가 컴파일될 때 Swift 컴파일러는 주석을 무시됩니다.
+
+Swift 의 주석은 C 의 주석과 매우 유사합니다.
+
+한줄 주석은 두개의 슬래시 (`//`) 로 시작합니다.
+
+~~~ swift
+// This is a comment.
+~~~
+
+#
+
+여러줄의 주석은 슬래시와 별표 (`/*`) 로 시작하고 별표와 슬래시 (`*/`) 로 끝납니다.
+
+~~~ swift
+/* This is also a comment
+but is written over multiple lines. */
+~~~
+
+#
+
+C 의 여러줄 주석과 다르게 Swift 의 여러줄 주석은 다른 여러줄 주석 안에 중첩될 수 있습니다.
+
+여러줄 주석 블럭을 시작한 다음 첫번째 블럭 내에서 두번째 여러줄 주석을 시작하여 중첩된 주석을 작성합니다.
+
+그런다음 두번째 블럭이 닫히고 첫번째 블럭이 이어집니다.
+
+~~~ swift
+/* This is the start of the first multiline comment.
+    /* This is the second, nested multiline comment. */
+This is the end of the first multiline comment. */
+~~~
+
+중첩된 여러줄 주석을 사용하면 코드에 이미 여러줄 주석이 포함되어 있어도 큰 코드 블럭을 빠르고 쉽게 주석 처리할 수 있습니다.
+
+<br>
+
+## 세미콜론 (Semicolons)
+
+다른 많은 언어와 달리 Swift 는 코드의 각 명령문 뒤에 세미콜론 (`;`) 을 작성하는 것은 필수조건이 아닙니다.
+
+물론 원한다면 그렇게 할 수도 있습니다.
+
+그러나 한줄에 여러개의 개별 명령문을 작성하려면 세미콜론은 필수로 작성되어야 합니다.
+
+~~~ swift
+let cat = "🐱"; print(cat)
+// Prints "🐱"
+~~~
+
+<br>
+
+## 정수 (Integers)
 
 
 
