--- a/Swift Documentation/2.Language Guide/1.The Basics.md
+++ b/Swift Documentation/2.Language Guide/1.The Basics.md
@@ -305,6 +305,98 @@ let cat = "🐱"; print(cat)
 
 ## 정수 (Integers)
 
+정수 (Integers) 는 `42` 와 `-23` 과 같은 분수가 아닌 전체 숫자 입니다.
+
+정수는 부호가 있는 정수 (signed)(양수, 0, 음수) 또는 부호가 없는 정수 (unsinged)(양수, 0) 이 있습니다.
+
+#
+
+Swift 는 8, 16, 32, 64 비트 형태의 부호가 있는 정수와 부호가 없는 정수를 제공합니다.
+
+이러한 정수는 8-bit 부호가 없는 정수는 `UInt8` 그리고 32-bit 부호가 있는 정수는 `Int32` 와 같이 C 와 비슷한 네이밍 규칙을 따릅니다.
+
+Swift 의 모든 타입과 마찬가지로 정수 타입은 대문자로 시작합니다.
+
+<br>
+
+### 정수 범위 (Integer Bounds)
+
+각 정수 타입의 `min` 과 `max` 프로퍼티를 통해 각 정수 타입의 최소값과 최대값에 접근할 수 있습니다.
+
+~~~ swift
+let minValue = UInt8.min  // minValue is equal to 0, and is of type UInt8
+let maxValue = UInt8.max  // maxValue is equal to 255, and is of type UInt8
+~~~
+
+이러한 프로퍼티의 값은 적절한 크기의 숫자 타입 (위의 예제에서 `UInt8`) 이므로 동일한 타입의 다른 값과 함께 표현식에 사용될 수 있습니다.
+
+<br>
+
+### Int
+
+대부분의 경우 코드에서 사용할 정수의 특정 사이즈를 결정할 필요는 없습니다.
+
+Swift 는 현재 플랫폼의 네이티브 사이즈와 같은 `Int` 인 정수 타입을 제공합니다.
+
+- 32-bit 플랫폼에서 `Int` 는 `Int32` 와 같은 크기를 갖습니다.
+- 64-bit 플랫폼에서 `Int` 는 `Int64` 와 같은 크기를 갖습니다.
+
+#
+
+특정 크기의 정수로 작업해야 하는 경우가 아니라면 항상 코드의 정수 값을 사용할 때 `Int` 를 사용하십시오.
+
+이것은 코드 일관성과 상호 운용성에 도움이 됩니다.
+
+32-bit 플랫폼에서도 `Int` 는 `-2,147,483,648` 과 `2,147,483,647` 사이의 값을 저장할 수 있으며 일반적인 사용성에 문제가 없습니다.
+
+<br>
+
+### UInt
+
+Swift 는 또한 현재의 플랫폼의 네이티브 사이즈와 같은 `UInt` 인 정수 타입을 제공합니다.
+
+- 32-bit 플랫폼에서 `UInt` 는 `UInt32` 와 같은 크기를 갖습니다.
+- 64-bit 플랫폼에서 `UInt` 는 `UInt64` 와 같은 크기를 갖습니다.
+
+> Note      
+> `UInt` 는 플랫폼의 네이티브 사이즈와 같은 크기의 부호없는 정수 타입이 필요한 경우에만 사용하십시오.
+> 그렇지 않은 경우에도 저장될 값이 음수가 아니어도 `Int` 가 더 선호됩니다.
+> 정수값에 `Int` 를 일관되게 사용하면 코드 상호 운용성이 향상되고, 서로다른 숫자 타입간 변환이 필요하지 않으며,
+> [타입 세이프티와 타입 추론 (Type Safety and Type Inference)]() 에 설명된 대로 정수 타입 추론과 일치합니다.
+
+<br>
+
+## 부동 소수점 숫자 (Floating-Point Numbers)
+
+부동 소수점 숫자 (Floating-point numbers) 는 `3.14159`, `0.1`, 및 `-273.15` 와 같이 분수 요소가 있는 숫자입니다.
+
+부동 소수점 타입은 정수 타입보다 훨씬 더 넓은 범위의 값을 나타낼 수 있으며 `Int` 보다 더 크거나 작은 값 저장이 가능합니다.
+
+Swift 는 2개의 부호를 가진 부동 소수점 타입을 제공합니다.
+
+- `Double` 은 64-bit 부동 소수점 숫자를 나타냅니다.
+- `Float` 은 32-bit 부동 소수점 숫자를 나타냅니다.
+
+> Note     
+> `Double` 은 최소 15자리의 소수점 정확도를 가지고 있는것에 반해 `Float` 은 더 적은 6자리의 정확도를 가집니다.
+> 적절하게 사용할 부동 소수점 타입은 코드에서 작업해야하는 값의 특성과 범위에 따라 다릅니다.
+> 두 타입이 모두 적합한 상황에서는 `Double` 이 선호 됩니다.
+
+<br>
+
+## 타입 세이프티와 타입 추론 (Type Safety and Type Inference)
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
