--- a/Swift Documentation/2.Language Guide/1.The Basics.md
+++ b/Swift Documentation/2.Language Guide/1.The Basics.md
@@ -386,12 +386,159 @@ Swift 는 2개의 부호를 가진 부동 소수점 타입을 제공합니다.
 
 ## 타입 세이프티와 타입 추론 (Type Safety and Type Inference)
 
+Swift 는 타입-세이프 (type-safe) 언어입니다.
 
+타입 세이프 언어는 코드에서 사용할 수 있는 값의 타입을 명확하게 하도록 권장합니다.
 
+코드의 일부에서 `String` 이 필요한 경우 실수로 `Int` 를 전달할 수 없습니다.
 
+#
 
+Swift 는 타입 세이프 언어이기 때문에 코드를 컴파일할 때 타입 검사를 수행하고 일치하지 않는 타입을 에러로 표시합니다.
 
+이를 통해 개발 프로세스에서 가능한 한 빨리 오류를 포착하고 수정할 수 있습니다.
 
+#
+
+타입 검사는 다양한 타입의 값으로 작업할 때 오류를 방지하는데 도움이 됩니다.
+
+그러나 이것이 선언하는 모든 상숭와 변수의 타입을 지정해야 한다는 의미는 아닙니다.
+
+필요한 값의 특정 타입을 지정하지 않으면 Swift 는 타입 추론 (Type Inference) 을 사용하여 적절한 타입을 찾습니다.
+
+타입 추론을 통해 컴파일러는 코드를 컴파일할 때 제공된 값을 검사하여 자동으로 특정 표현식의 타입을 추론할 수 있습니다.
+
+#
+
+타입 추론으로 인해 Swift 에서는 C 나 Objective-C 와 같은 언어보다 훨씬 적은 타입 선언이 요구됩니다. 
+
+상수와 변수는 여전히 명시적으로 타입이 지정되지만 그것들의 타입을 지정하는 작업 중 많은 부분이 자동으로 처리됩니다.
+
+#
+
+타입 추론은 특히 상수 또는 변수에 초기값을 선언할 때 아주 유용합니다.
+
+이는 선언하는 시점에서 상수나 변수에 리터럴 값 (literal value) 또는 리터럴 (literal) 을 할당하여 수행되는 경우가 많습니다.   
+(리터럴 값은 아래 예에서 42, 3.14159 와 같이 소스 코드에 직접 표시되는 값입니다.)
+
+#
+
+예를 들어 어떤 타입인지 선언하지 않고 새로운 상수에 42 의 리터럴 값으로 할당하면 Swift 는 정수처럼 보이는 숫자로 초기화 했기 때문에 상수가 `Int` 라고 추론합니다.
+
+~~~ swift
+let meaningOfLife = 42
+// meaningOfLife is inferred to be of type Int
+~~~
+
+#
+
+마찬가지로 부동 소수점 리터럴 값에 대한 타입을 지정하지 않으면 Swift 는 `Double` 이라고 추론합니다.
+
+~~~ swift
+let pi = 3.14159
+// pi is inferred to be of type Double
+~~~
+
+#
+
+Swift 는 부동 소수점 숫자의 타입을 추론할 때 항상 `Float` 보다 `Double` 을 선택하여 추론합니다.
+
+표현식에서 정수와 부동 소수점 리터럴 값을 결합하면 컨텍스트에서는 `Double` 타입으로 추론됩니다.
+
+~~~ swift
+let anotherPi = 3 + 0.14159
+// anotherPi is also inferred to be of type Double
+~~~
+
+`3` 인 리터럴 값에는 명시적인 타입이 없으므로 추가로 부동 소수점 리터럴 값이 존재하는 경우 `Double` 타입이 추론됩니다.
+
+<br>
+
+## 숫자 리터럴 (Numeric Literals)
+
+정수 리터럴은 아래와 같이 작성할 수 있습니다.
+
+- 접두사가 없는 10진수
+- `0b` 접두사가 있는 2진수
+- `0o` 접두사가 있는 8진수
+- `0x` 접두사가 있는 16진수
+
+#
+
+아래의 예에서 모든 정수 리터럴 값은 10진수 `17` 의 값을 가집니다.
+
+~~~ swift
+let decimalInteger = 17
+let binaryInteger = 0b10001       // 17 in binary notation
+let octalInteger = 0o21           // 17 in octal notation
+let hexadecimalInteger = 0x11     // 17 in hexadecimal notation
+~~~
+
+#
+
+부동 소수점 리터럴은 10진수 (접두사 없음) 또는 16진수 (접두사 `0x`) 일 수 있습니다.
+
+소수점 양쪽에는 항상 숫자 (또는 16진수) 가 있어야 합니다.
+
+10진수는 대문자 또는 소문자 `e` 로 표시되는 지수를 가질 수도 있습니다.
+
+16진수는 대문자 또는 소문자 `p` 로 표시되는 지수를 가질 수도 있습니다.
+
+#
+
+지수가 `x` 인 10진수는 기본 숫자에 10ˣ 가 곱해집니다.
+
+- `1.25e2` 는 1.25 x 10², 또는 125.0
+- `1.25e-2` 는 1.25 x 10⁻², 또는 0.0125
+
+#
+
+지수가 `x` 인 16진수는 기본 숫자에 2ˣ 가 곱해집니다.
+
+- `0xFp2` 는 15 x 2², 또는 60.0
+- `0xFp-2` 는 15 x 2⁻², 또는 3.75
+
+#
+
+아래의 예에서 모든 부동 소수점 리터럴은 10진수 `12.1875` 를 가집니다.
+
+~~~ swift
+let decimalDouble = 12.1875
+let exponentDouble = 1.21875e1
+let hexadecimalDouble = 0xC.3p0
+~~~
+
+#
+
+숫자 리터럴에는 읽기 쉽게 만드는 추가 포맷을 포함시킬 수 있습니다.
+
+정수와 부동 소수점 모두 추가적으로 0이 채워질 수 있으며 가독성을 높이기 위해 밑줄을 포함할 수 있습니다.
+
+어떤 형식도 리터럴의 기본값에 영향을 주지 않습니다.
+
+~~~ swift
+let paddedDouble = 000123.456
+let oneMillion = 1_000_000
+let justOverOneMillion = 1_000_000.000_000_1
+~~~
+
+<br>
+
+## 숫자 타입 변환 (Numeric Type Conversion)
+
+음수를 사용하지 않더라도 코드에서 상수와 변수가 정수로 사용이 되면 `Int` 타입을 사용하십시오.
+
+일반적인 상황에서 기본 정수 타입을 사용한다는 것은 정수인 상수와 변수가 코드에서 즉시 상호 운용 가능하고 정수 리터럴 값의 유추된 타입과 일치한다는 것을 의미합니다.
+
+#
+
+외부 소스에서 명시적으로 크기가 지정된 데이터 또는 성능, 메모리 사용, 또는 기타 필요한 최적화 등 특별히 필요한 경우에만 다른 정수 타입을 사용하십시오.
+
+이러한 상황에서 명시적으로 크기가 지정된 타입을 사용하면 실수로 인한 값 초과를 포착하고 사용중인 데이터의 특성을 암시적으로 아는데 도움이 됩니다.
+
+<br>
+
+### 정수 변환 (Integer Conversion)
 
 
 
