--- a/Swift Documentation/2.Language Guide/1.The Basics.md
+++ b/Swift Documentation/2.Language Guide/1.The Basics.md
@@ -540,8 +540,61 @@ let justOverOneMillion = 1_000_000.000_000_1
 
 ### 정수 변환 (Integer Conversion)
 
+정수를 저장할 수 있는 상수 또는 변수의 숫자 범위는 각 숫자 타입에 따라 다릅니다.
 
+`Int8` 타입의 상수 또는 변수는 `-128` 과 `127` 사이의 숫자를 저장할 수 있는 반면에 `UInt8` 타입의 상수 또는 변수는 `0` 과 `255` 사이의 숫자를 저장할 수 있습니다.
 
+크기가 지정된 정수 타입의 상수 또는 변수에 크기가 맞지않는 숫자는 컴파일할 때 에러가 발생합니다.
+
+~~~ swift
+let cannotBeNegative: UInt8 = -1
+// UInt8 can't store negative numbers, and so this will report an error
+let tooBig: Int8 = Int8.max + 1
+// Int8 can't store a number larger than its maximum value,
+// and so this will also report an error
+~~~
+
+#
+
+각 숫자 타입은 서로 다른 범위의 값을 저장할 수 있으므로 각 타입별로 숫자 타입 변환을 선택해야 합니다.
+
+이 방식은 숨겨진 변환 에러를 방지하고 코드에서 타입 변환 의도를 명시적으로 만드는데 도움을 줍니다.
+
+#
+
+특정 숫자 타입을 다른 숫자 타입으로 변환하려면 기존 값을 사용하여 원하는 타입의 새 숫자를 초기화 합니다.
+
+아래의 예제에서 상수 `twoThousand` 는 `UInt16` 타입이고 상수 `one` 은 `UInt8` 타입입니다.
+
+두 상수는 동일한 타입이 아니기 때문에 직접 더할 수 없습니다.
+
+대신 이 예제에서는 `UInt16(one)` 을 호출하여 `one` 의 값을 새로운 `UInt16` 으로 초기화하고 기존 값 대신 초기화한 값을 사용합니다.
+
+~~~ swift
+let twoThousand: UInt16 = 2_000
+let one: UInt8 = 1
+let twoThousandAndOne = twoThousand + UInt16(one)
+~~~
+
+양쪽의 타입이 `UInt16` 이므로 덧셈은 이제 제대로 동작합니다.
+
+출력 상수 `(twoThousandAndOne)` 은 두 `UInt16` 값을 더하므로 `UInt16` 타입으로 추론됩니다.
+
+#
+
+`SomeType (ofInitialValue)` 는 Swift 타입의 초기화를 호출하고 초기화 값을 전달하는 기본적인 방법입니다.
+
+내부적으로 `UInt16` 은 `UInt8` 값을 허용하는 초기화가 있으므로 초기화는 기존 `UInt8` 에서 새 `UInt16` 을 만드는데 사용될 수 있었습니다.
+
+그러나 여기서는 모든 타입을 전달할 수 있는것은 아닙니다.
+
+`UInt16` 타입이 초기화를 제공하는 타입이어야 합니다.
+
+기존 타입을 확장하여 새로운 타입 (자신이 정의한 새로운 타입) 을 받아들이는 초기화를 제공하는 것은 [확장 (Extensions)]() 에서 다룹니다.
+
+<br>
+
+### 정수와 부동 소수점 변환 (Integer and Floating-Point Conversion)
 
 
 
