--- a/Swift Documentation/2.Language Guide/1.The Basics.md
+++ b/Swift Documentation/2.Language Guide/1.The Basics.md
@@ -596,6 +596,131 @@ let twoThousandAndOne = twoThousand + UInt16(one)
 
 ### 정수와 부동 소수점 변환 (Integer and Floating-Point Conversion)
 
+정수와 부동 소수점 숫자 타입 간의 변환은 명시적으로 이루어져야 합니다.
+
+~~~ swift
+let three = 3
+let pointOneFourOneFiveNine = 0.14159
+let pi = Double(three) + pointOneFourOneFiveNine
+// pi equals 3.14159, and is inferred to be of type Double
+~~~
+
+여기서 상수 `three` 는 `Double` 타입의 새로운 값을 생성하는데 사용되고 덧셈의 양쪽이 동일한 타입이 됩니다.
+
+이 변환이 이루어지지 않으면 덧셈이 허용되지 않습니다.
+
+#
+
+부동 소수점에서 정수로의 변환도 명시적으로 이루어져야 합니다.
+
+정수 타입은 `Double` 또는 `Float` 값으로 초기화 될 수 있습니다.
+
+~~~ swift
+let integerPi = Int(pi)
+// integerPi equals 3, and is inferred to be of type Int
+~~~
+
+> Note     
+> 숫자 상수와 변수를 결합하는 규칙은 숫자 리터럴 규칙과 다릅니다.
+> 리터럴 값 `3` 은 숫자 리터럴에 명시적인 타입이 없으므로 리터럴 값 `0.14159` 에 직접 추가할 수 있습니다.
+> 해당 타입은 컴파일러가 실행되는 시점에서만 추론됩니다.
+
+<br>
+
+## 타입 별칠 (Type Aliases)
+
+타입 별칭 (Type Aliases) 은 이미 존재하는 타입을 다른 이름으로 정의합니다.
+
+타입 별칭은 `typealias` 키워드를 사용하여 정의할 수 있습니다.
+
+#
+
+타입 별칭은 외부 소스에서 특정 크기의 데이터로 작업할 때와 같이 상황에 더 적합한 이름으로 기존 타입을 참조하려는 경우에 유용합니다.
+
+~~~ swift
+typealias AudioSample = UInt16
+~~~
+
+타입 별칭을 정의하면 원래 이름을 사용할 수 있는 모든 곳에서 별칭을 사용할 수 있습니다.
+
+~~~ swift
+var maxAmplitudeFound = AudioSample.min
+// maxAmplitudeFound is now 0
+~~~
+
+여기서 `AudioSample` 은 `UInt16` 의 별칭으로 정의됩니다.
+
+별칭이기 때문에 `AudioSample.min` 에 대한 호출은 실제로 `UInt16.min` 을 호출하며 `maxAmplitudeFound` 변수의 초기값은 `0` 입니다.
+
+<br>
+
+## 부울 (Booleans)
+
+Swift 는 `Bool` 이라는 기본 부울 (Boolean) 타입이 있습니다.
+
+부울 값은 오직 참 또는 거짓 값만 가지므로 논리 값이라고 합니다.
+
+Swift 는 두개의 부울 상수 값인 `true` 와 `false` 를 제공합니다.
+
+~~~ swift
+let orangesAreOrange = true
+let turnipsAreDelicious = false
+~~~
+
+`orangesAreOrange` 와 `turnipsAreDelicious` 의 타입은 부울 리터럴 값으로 초기화 되어 `Bool` 타입으로 추론되었습니다.
+
+위의 `Int` 와 `Double` 에서와 같이 상수 또는 변수를 초기화 시 `true` 또는 `false` 로 선언하면 상수 또는 변수를 `Bool` 타입으로 선언할 필요가 없습니다.
+
+타입 추론은 이미 알고있는 타입의 다른 값으로 상수 또는 변수를 초기화 시에 Swift 코드를 더 간결하고 읽기 쉽게 만드는데 도움이 됩니다.
+
+#
+
+부울 값은 `if` 문과 같은 조건문으로 작업할 때 특히 유용합니다.
+
+~~~ swift
+if turnipsAreDelicious {
+    print("Mmm, tasty turnips!")
+} else {
+    print("Eww, turnips are horrible.")
+}
+// Prints "Eww, turnips are horrible."
+~~~
+
+`if` 문과 같은 조건문은 [제어 흐름 (Control Flow)]() 에서 더 자세히 다룹니다.
+
+#
+
+Swift 의 타입 세이프티는 부울이 아닌 값이 `Bool` 로 대체되는 것을 방지합니다.
+
+아래 예제는 컴파일 시 에러를 발생합니다.
+
+~~~ swift
+let i = 1
+if i {
+    // this example will not compile, and will report an error
+}
+~~~
+
+그러나 아래와 같은 예제는 정상적으로 동작합니다.
+
+~~~ swift
+let i = 1
+if i == 1 {
+    // this example will compile successfully
+}
+~~~
+
+`i == 1` 의 비교 결과는 `Bool` 타입 이므로 이 두번째 예제는 타입 검사를 통과합니다.
+
+`i == 1` 와 같은 비교는 [기본 연산자 (Basic Operators)]() 에서 설명합니다.
+
+#
+
+Swift 의 타입 세이프티에 대한 다른 예제와 마찬가지로 이 접근 방식은 우발 우발적인 에러를 방지하고 코드의 특정 섹션의 의도가 항상 명확하도록 보장합니다.
+
+<br>
+
+## 튜플 (Tuples)
 
 
 
