--- a/Swift Documentation/2.Language Guide/1.The Basics.md
+++ b/Swift Documentation/2.Language Guide/1.The Basics.md
@@ -722,6 +722,148 @@ Swift 의 타입 세이프티에 대한 다른 예제와 마찬가지로 이 접
 
 ## 튜플 (Tuples)
 
+튜플 (Tuples) 은 여러 값을 단일 복합 값으로 그룹화 합니다.
+
+튜플 내의 값은 모든 타입이 될 수 있으며 서로 동일한 타입일 필요는 없습니다.
+
+#
+
+이 예제에서 `(404, "Not Found")` 는 HTTP 상태코드 (HTTP status code) 를 나타내는 튜플 입니다.
+
+HTTP 상태 코드는 웹 페이지를 요청할 때마다 웹 서버에서 반환되는 특수 값입니다.
+
+존재하지 않는 웹페이지를 요청하면 `404 Not Found` 상태 코드가 반환됩니다.
+
+~~~ swift
+let http404Error = (404, "Not Found")
+// http404Error is of type (Int, String), and equals (404, "Not Found")
+~~~
+
+`(404, "Not Found")` 튜플은 HTTP 상태 코드에 2개의 개별 값인 숫자와 사람이 읽을 수 있는 설명을 제공하는 `Int` 와 `String` 을 함께 그룹화 하여 제공합니다.
+
+이것의 타입은 "튜플의 타입 `(Int, String)`" 으로 설명할 수 있습니다.
+
+#
+
+모든 타입의 튜플을 만들 수 있으며 원하는 만큼 다른 타입을 포함할 수 있습니다.
+
+튜플의 타입 `(Int, Int, Int)` 또는 `(String, Bool)` 또는 실제로 필요한 다른 어떠한 것도 만들 수 있습니다.
+
+#
+
+튜플의 내용을 별도의 상수 또는 변수로 분해 (decompose) 하여 평소와 같이 접근할 수 있습니다.
+
+~~~ swift
+let (statusCode, statusMessage) = http404Error
+print("The status code is \(statusCode)")
+// Prints "The status code is 404"
+print("The status message is \(statusMessage)")
+// Prints "The status message is Not Found"
+~~~
+
+#
+
+튜플의 값중 일부만 필요한 경우 튜플을 분해할 때 밑줄 `(_)` 로 튜플의 일부를 무시할 수 있습니다.
+
+~~~ swift
+let (justTheStatusCode, _) = http404Error
+print("The status code is \(justTheStatusCode)")
+// Prints "The status code is 404"
+~~~
+
+#
+
+또는 0부터 시작하는 인덱스를 사용하여 튜플의 개별 요소 값에 접근할 수 있습니다.
+
+~~~ swift
+print("The status code is \(http404Error.0)")
+// Prints "The status code is 404"
+print("The status message is \(http404Error.1)")
+// Prints "The status message is Not Found"
+~~~
+
+#
+
+튜플을 정의할 때 튜플의 요소에 이름을 정할 수 있습니다.
+
+~~~ swift
+let http200Status = (statusCode: 200, description: "OK")
+~~~
+
+#
+
+튜플에 있는 요소의 이름을 지정하면 요소 이름을 사용하여 해당 요소의 값에 접근할 수 있습니다.
+
+~~~ swift
+print("The status code is \(http200Status.statusCode)")
+// Prints "The status code is 200"
+print("The status message is \(http200Status.description)")
+// Prints "The status message is OK"
+~~~
+
+#
+
+튜플은 함수의 반환값으로 특히 유용합니다.
+
+웹 페이지를 검색하는 함수는 페이지 검색의 성공 또는 실패를 설명하기 위해 `(Int, String)` 튜플 타입을 반환할 수 있습니다.
+
+이 함수는 각각 다른 타입의 2가지 고유한 값으로 튜플을 반환함으로써 단일 타입의 단일 값만 반환할 수 있는 경우보다 결과에 대한 더 유용한 정보를 제공합니다.
+
+자세한 내용은 [반환값이 여러개인 함수 (Functions with Multiple Return Values)]() 를 참조하세요.
+
+> Note     
+> 튜플은 관련된 값의 간단한 그룹에 유용합니다.
+> 복잡한 데이터 구조를 생성할 때는 적합하지 않습니다.
+> 데이터 구조가 복잡한 경우에는 튜플이 아닌 클래스 (class) 또는 구조체 (struct) 로 모델링하세요.
+> 자세한 내용은 [구조체와 클래스 (Structures and Classes)]() 를 참조하세요.
+
+<br>
+
+## 옵셔널 (Optionals)
+
+값이 없을 수도 있는 경우에 옵셔널 (Optionals) 을 사용합니다.
+
+옵셔널은 두가지 가능성이 있습니다.
+
+지정된 타입의 값이 있고 옵셔널을 풀어서 값에 접근하거나 값이 전혀 없을 수도 있습니다.
+
+#
+
+누락될 수 있는 값의 예로 Swift 의 `Int` 타입은 `String` 값을 `Int` 값으로 변환할 수 있는 초기화가 있습니다.
+
+그러나 일부 문자열만 정수로 변환할 수 있습니다.
+
+문자열 `"123"` 은 숫자값 `123` 으로 변환될 수 있지만 문자열 `"hello, world"` 는 변환할 숫자값이 없습니다.
+
+#
+
+아래 예제는 이니셜라이저를 사용하여 `String` 값을 `Int` 값으로 변환하는 것을 보여줍니다.
+
+~~~ swift
+let possibleNumber = "123"
+let convertedNumber = Int(possibleNumber)
+// The type of convertedNumber is "optional Int"
+~~~
+
+위의 코드에서 초기화가 실패할 수 있으므로 `Int` 가 아닌 옵셔널 `Int` 를 반환합니다.
+
+옵셔널 타입을 작성하려면 옵셔널이 포함하는 타입 이름 뒤에 물음표 `(?)` 를 작성합니다.
+
+예를 들어 옵셔널 `Int` 의 타입은 `Int?` 입니다.
+
+옵셔널 `Int` 는 항상 어떠한 `Int` 값이 포함되거나 값이 전혀 포함되지 않을 수 있습니다.
+
+`Bool` 또는 `String` 값과 같은 다른 타입을 포함할 수 없습니다.
+
+<br>
+
+### nil
+
+
+
+
+
+
 
 
 
